키보드 마우스 세트 구입

--- a/_posts/2015-10-04-JPA01.markdown
+++ b/_posts/2015-10-04-JPA01.markdown
@@ -1,7 +1,10 @@
 ---
 layout: post
 title:  "[책] 자바 ORM 표준 JPA 프로그래밍"
+category : "book"
 ---
+
+# 들어가며
 회사에서도 JPA를 사용하고 있는데, JPA에 관한 책이 한국어로 나온 게 없어서 곤란을 겪고 있었다.
 마침 이 책이 나와서 구매했는데...구매하고 나서 거의 읽지를 않았다;;;
 
