--- a/_posts/2015-10-25-마크다운 에디터 고르기.md
+++ b/_posts/2015-10-25-마크다운 에디터 고르기.md
@@ -21,18 +21,18 @@ tags : "blog"
 ## Sublime Text 2 + 확장 프로그램
 서브라임 텍스트 2 에 확장 프로그램을 깔아서 사용하기로 했다. 먼저
 
-### _MarkdownEditing_ : 깃허브 마크다운 문법 + 마크다운 문법을 편하게 사용할 수 있게 해 준다.
+_MarkdownEditing_ : 깃허브 마크다운 문법 + 마크다운 문법을 편하게 사용할 수 있게 해 준다.
 - 리스트 마지막에 `ENTER`를 치면 리스트를 자동적으로 생성해준다.
 - 텍스트를 선택하고 `>`키를 누르면 이용구로 변환한다.
 - 커멘드 + 옵션 + k로 인라인 링크를 삽입할 수 있다.
 - 시프트 + 옵션 + k로 인라인 이미지를 삽입할 수 있다.
 - [MarkdownEditing Feature](https://github.com/SublimeText-Markdown/MarkdownEditing#features) 에서 여러 가지 기능을 확인할 수 있다.
 
-### _Markdown Preview_ : 결과를 프리뷰 할 수 있다. 이 기능은 MacDown보다 좀 불편한 게, 저장하고 프리뷰 페이지를 다시 리프레시해야 화면이 보인다. 그래도 그럴저럭 쓸 만은 하다.
+_Markdown Preview_ : 결과를 프리뷰 할 수 있다. 이 기능은 MacDown보다 좀 불편한 게, 저장하고 프리뷰 페이지를 다시 리프레시해야 화면이 보인다. 그래도 그럴저럭 쓸 만은 하다.
 
-### _Smart Markdown_ : 마크다운 문서를 접을 수 있고, 마크다운 문서를 pdf, word, html로 뽑아낼 수 있다. pandoc이 필요하다.
+_Smart Markdown_ : 마크다운 문서를 접을 수 있고, 마크다운 문서를 pdf, word, html로 뽑아낼 수 있다. pandoc이 필요하다.
 
-### _Git_ : 깃과 연동할 때 유용하다. 작업을 완료한 후에 커멘드라인이 아니라 GUI를 이용하여 푸시할 수 있다. 상당히 편리하다.
+_Git_ : 깃과 연동할 때 유용하다. 작업을 완료한 후에 커멘드라인이 아니라 GUI를 이용하여 푸시할 수 있다. 상당히 편리하다.
 
 # 결론
 현재는 Sublime Text 2 에 패키지를 설치해서 사용하고 있다. 상당히 만족스럽다. 돌고 돌아 서브라임 텍스트로 오다니...서브라임 텍스트의 패키지는 정말 강력한 기능이라고 다시 한번 느꼈다.
