kramdown markdown test

--- a/_posts/2016-02-16-Tree-순회방법.md
+++ b/_posts/2016-02-16-Tree-순회방법.md
@@ -11,7 +11,7 @@ tags:
 이 페이지의 모든 코드는 java로 짜여져 있다.
 
 ## Node 정의
-```
+~~~ java
 class Node {
 	Node left;
 	Node right;
@@ -21,7 +21,7 @@ class Node {
 		this.data = data;
 	}
 }
-```
+~~~
 
 ## 깊이우선탐색(Depth First Search)
 사실 이게 더 간단한 편이다. 트리를 순회하는 데 있어서 깊이를 우선으로 순회하는 방법이다. preorder, inorder, postorder 의 세 가지 방법이 있다.
