~~~ 로 코드블록 변환

--- a/_posts/2015-11-19-알고리즘 문제 해결 전략.markdown
+++ b/_posts/2015-11-19-알고리즘 문제 해결 전략.markdown
@@ -41,12 +41,12 @@ tags : algorithm
 ## 단순한 방법에서 시작할 수 없을까?
 시간과 공간 제약을 생각하지 않고 문제를 풀어본다.
 
-```
+~~~ java
 문제 : N(N<=30)개의 사탕을 세 명의 어린이에게 가능한 한 공평하게 나눠 주려고 한다. 
 공평함은 사탕의 총 무게가 가장 무거운 어린이 - 가장 가벼운 어린이의 차이라고 정의한다. 
 사탕의 문게는 모두 20 이하의 정수이다. 
 가장 무거운 어린이 - 가장 가벼운 어린이의 차가 최소가 되는 건 얼마일까요?
-```
+~~~ java
 
 1. 사탕을 나눠 주는 모든 방법을 하나씩 만들어본다. 각 사탕마다 세 명 중 한명한테 준다고 가정하면 가능한 경우의 수는 3^N 가지이다.
 2. 받은 사탕들이 서로 다르더라도 그 무게는 같을 수 있다. 각각의 아이마다 상태를 표시하는 공간을 둔다. (0, 0, 0)으로 시작하여, 사탕을 하나 줄 때마다 아이가 가진 사탕의 양을 늘린다. 사탕의 최대 무게는 200이므로, 각 아이가 가진 사탕의 양은 0에서 20 * N의 사이이다. 따라서 이와 같이 문제를 풀려면 대략 2억개의 배열을 잡아야 한다.
