--- a/_drafts/2016-11-22-클라우드 시스템을 관리하는 기술(서비스 인도-배치 국면).md
+++ b/_drafts/2016-11-22-클라우드 시스템을 관리하는 기술(서비스 인도-배치 국면).md
@@ -6,6 +6,26 @@
 ### 승격
 특정 릴리즈를 선택하여, 원하는 환경에 사용할 자격을 부여한다. 특정한 버전을 선택하고, 이들이 지정된 실무 버전임을 표시한다.
 - 꼬리표 매커니즘
-- 
+- 핀 꽃기
+- 저장소를 여러 개 둔다
 
-### 
+### 설치
+패키지를 대상 기계에 복사하여 설치한다. 패키지의 설치 이전과 이후에 실행될 스크립트를 포함할 수도 있다.
+
+### 구성
+설치된 패키지를 실제로 실행되는 서비스로 바꾸는 데 필요한 지역 설정들과 자료를 적절히 마련한다.
+ex) 기계가 담당할 도메인을 결정하고, 부하 분산기가 기계를 인식하게 하고...
+- 수렴 편성(convergent orchestrration; 한 점에 모이는 웹 서비스 결합) : 환경을 구성하는 방식에 대한 서술에 기초하여, 구성 관리 시스템이 개별 변경을 실행한다.
+- 직접 편성(direct orchestration; 직접적인 웹 서비스 결합) :
+
+## 검사와 승인
+### 검사
+#### 시스템 검사
+서비스의 모든 조각을 모아서, 최종 제품 혹은 시스템을 점검한다.
+
+#### 성능 검사
+여러 조건하에서 서비스 속도를 판정한다.
+
+#### 부하 검사
+
+#### 사용자 인수 검사
