website optimize chapter 01

--- a/_drafts/2016-12-18-웹 사이트 최적화 기법.md
+++ b/_drafts/2016-12-18-웹 사이트 최적화 기법.md
@@ -46,11 +46,20 @@ tags:
 더 중요해졌다. 이유는 다음과 같다.
 
 - 글로벌 서비스에서는 레이턴시를 줄일 방법이 없기 때문
-// TODO : 구글 개발자를 위한 네트워크 ~ 레이턴시 부분 인용
-    - 
+    - 클라이언트가 뉴욕, 서버가 런던에 있는 경우 TCP 커넥션을 맺게 되면 최소 56ms가 소비됨
+    - 대부분의 시스템은 300ms 이상이 되면, 시스템을 느리다고 인식하게 됨
 - 요청을 맺고 끊는데 드는 비용이 크기 때문(Three-hand shake)
-    - 파이프라이닝, HTTP 2.0 과 같은 스펙 추가되어 극복 노력 중
-    - MultiPlexed streams(HTTP 2.0)
+
+### 서버 개선 방안
+- 파이프라이닝
+    - 파이프라이닝은 구현하기가 어려움
+- 도메인 샤딩
+    - 한 도메인당 최대 두 개 까지의 커넥션이 가능했지만, 현재는 일반적으로 최대 여섯 개까지의 병렬 커넥션 가능
+    - 현재는 성능 이슈 때문에 잘 사용하지 않음.
+    - HTTP 2.0에서는 Connection Coalescing 을 통하여, 도메인 샤딩을 되돌리게 됨.
+        
+- MultiPlexed streams(HTTP 2.0)
+    - 
 
 ### CSS Sprite
 - 이미지를 하나로 합쳐서 배포하는 기술은 아직도 여러 곳에서 사용중
@@ -60,9 +69,13 @@ tags:
 ### 스크립트 압축
 - 의존성 있는 스크립트를 하나로 합칠 수 있게 하는 다양한 라이브러리 존재
 - Webpack
-    - CommonJS와 AMD 두 가지 의존성을 모두 지원함
+    - CommonJS와 AMD 두 가지 의존성 관리 포멧을 모두 지원함
     - 의존성 있는 모듈끼리 합쳐서 하나의 js 파일로 만들 수 있음
-    - http://d2.naver.com/helloworld/0239818
+    - [webpack](http://d2.naver.com/helloworld/0239818)
+    - 이외에도 다양한 기능 제공
+        - 로더
+        - 모듈 의존성 관리
+
 
 
 
