--- a/_drafts/2016-12-18-웹 사이트 최적화 기법.md
+++ b/_drafts/2016-12-18-웹 사이트 최적화 기법.md
@@ -28,10 +28,7 @@ tags:
 
 이 경우, 분리된 이미지를 사용하는 것보다 57% 빠르다.
 
-### 단점
-성능상으로는 잇점이 있지만, 단점 또한 존재한다.
-
-- 
+![css_sprite]({{ site.url }}/asset/20161218_172234.jpg)
 
 ## 스크립트와 스타일시트의 결합
 스크립트와 스타일시트를 분리하지 않고 하나로 합쳐서 클라이언트로 내려준다.
@@ -48,7 +45,13 @@ tags:
 - 글로벌 서비스에서는 레이턴시를 줄일 방법이 없기 때문
     - 클라이언트가 뉴욕, 서버가 런던에 있는 경우 TCP 커넥션을 맺게 되면 최소 56ms가 소비됨
     - 대부분의 시스템은 300ms 이상이 되면, 시스템을 느리다고 인식하게 됨
+
+![speed]({{ site.url }}/asset/20161219_004018.jpg)
+
 - 요청을 맺고 끊는데 드는 비용이 크기 때문(Three-hand shake)
+
+![request_process]({{ site.url }}/asset/20161219_004018.jpg)
+
 
 ### 서버 개선 방안
 - 파이프라이닝
@@ -56,15 +59,22 @@ tags:
 - 도메인 샤딩
     - 한 도메인당 최대 두 개 까지의 커넥션이 가능했지만, 현재는 일반적으로 최대 여섯 개까지의 병렬 커넥션 가능
     - 현재는 성능 이슈 때문에 잘 사용하지 않음.
-    - HTTP 2.0에서는 Connection Coalescing 을 통하여, 도메인 샤딩을 되돌리게 됨.
-        
-- MultiPlexed streams(HTTP 2.0)
-    - 
+
+![request_process]({{ site.url }}/asset/http_pipelining.PNG)
+
+- Multiplexing(HTTP 2.0)
+    - TCP 연결이 되면, 모든 요청은 TCP 커넥션을 통해 수행됨.
+    - 여러 요청은 프레임으로 분할되어, 각각의 스트림 ID가 부여됨
+    - 여러 스트림의 모든 프레임이 비동기적으로 리퀘스트 / 서버는 비동기적으로 응답
+    - 클라이언트는 스트림 ID에 따라 프레임을 정렬함
+
+![request_process]({{ site.url }}/asset/multiplexing.png)
 
 ### CSS Sprite
 - 이미지를 하나로 합쳐서 배포하는 기술은 아직도 여러 곳에서 사용중
 - grunt-spritesmith 를 이용하여, 자동으로 이미지 스프라이트가 되게 할 수 있다.
     - 특정 폴더에 이미지를 넣어 두고, grunt task를 실행하면 자동으로 이미지를 sprite 할 수 있다.
+    - [link](https://blog.outsider.ne.kr/1133)
 
 ### 스크립트 압축
 - 의존성 있는 스크립트를 하나로 합칠 수 있게 하는 다양한 라이브러리 존재
@@ -75,6 +85,80 @@ tags:
     - 이외에도 다양한 기능 제공
         - 로더
         - 모듈 의존성 관리
+
+# 헤더에 만료기간을 추가하라
+헤더에 만료기한을 추가하여 구성요소를 캐시에 저장할 수 있다. 헤더 만료기산은 스크립트, 스타일시트, 플래시와 같은 모든 구성요소에서 사용하는 것이 좋다.
+
+## 만료기한
+- Expires 를 주어서, HTTP응답이 더 이상 유효하지 않은 시간을 선언할 수 있다.
+- 이 값은 헤더 안에 포함하여 보낸다.
+
+~~~
+Expires: Thu, 15 Apr 2010 20:00:00 GMT
+~~~
+
+## max-age와 mod_expires 속성
+- Expires의 문제점
+	- Expires 속성은 지정된 날짜를 이용하기 때문에, 서버와 클라이언트 간에 시간을 맞춰서 이용해야 하는 문제점이 있음
+	- 만료 날짜를 확인해야 하고, 만료되면 갱신시켜줘야 함
+- Cache-Control은 max-age 속성을 이용해, 구성요소를 캐시에 보관할지 설정
+
+~~~
+Cache-Control: max-age=315360000
+~~~
+
+- HTTP 1.0 사용자를 위해, max-age와 Expires를 둘 다 설정해주면 좋음
+- 아파치의 mod_expires 모듈을 이용하면 된다.
+
+## 파일 이름의 활용
+- 캐시에 저장된 리소스를 비우고, 새로운 리소스를 다운받게 하고 싶을 때
+- 파일 이름을 변환하여 리소스를 새로 받게 한다.
+
+## Expires를 주지 않은 경우?
+- 조건부 Get 요청을 날려, 캐시의 유효기간을 확인한다.
+	- 304 Not Modified + 응답 데이터가 없는 응답이 오면 캐시에서 데이터 꺼내서 사용 
+- 헤더에 미리 기간을 담아서 내려주면, 조건부 GET 요청을 날리지 않으므로 그 시간이 절약됨
+
+## Cache-Control의 기타 옵션
+- public 으로 되어 있다면, 일반적으로 캐싱할 수 없는 데이터도 무조건 캐싱할 수 있다는 의미이다. 보통의 경우에는 쓸 일이 없다. private로 되어 있다면 중간 브릿지 페이지는 이를 캐싱할 수 없다(CDN 같은 것)
+- 
+
+## 사례 확인
+1. 네이버 : 스크립트, 이미지, CSS모두 캐싱됨. 파일 이름을 변경하여 리소스를 리로드함. 이유는 잘 모르겠지만 캐시가 되지 않는 정적 리소스가 조금 있음
+2. 아마존 : HTML을 제외한 모든 리소스가 캐싱됨. 캐싱 기간이 대략 10년 근방. 로딩하는 리소스가 많은데, 체감 속도는 빠름.
+3. 구글 : 로딩하는 데이터의 양이 가장 적음. 모든 데이터가 캐싱됨. 캐싱 기간이 페이스북과 더불어 가장 짧음(대략 1년)
+4. 페이스북 : 모든 정적 리소스가 캐싱됨. 캐싱 기간이 대략 1년 정도. 정말 짧은 정적 리소스는 2주 캐싱되는 경우도 있음.
+
+
+# Gzip 컴포넌트
+페이지를 전송하기 전에 압축해서 보낼 수 있다.
+
+## 적용방법
+- 클라이언트가 요청할 시 헤더에 해당 정보를 담는다.
+
+~~~
+Accept-Encoding:gzip, deflate
+~~~
+
+- 서버는 위의 요청을 보고, 클라이언트가 지정한 압축 방식 중 하나로 응답을 압축한다. Content-Encoding을 이용하여 클라이언트에게 알려준다.
+
+~~~
+Content-Encoding: gzip
+~~~
+
+## 무엇을 압축해야 하는가?
+- HTML, 스크립트, CSS는 압축하면 좋다.
+- PDF와 이미지는 이미 압축된 파일이기 때문에, 압축을 적용해서는 안 된다.
+- 압축을 하고 / 푸는 데 추가적인 CPU 비용이 들어간다. 대략적으로 파일이 1~2 KB보다 크면 압축을 적용해 볼 만 하다.
+
+## 사례
+- 아마존 : gzip으로 압축
+- 페이스북 : br로 압축
+- 네이버 : gzip으로 압축 / css, js 모두 압축
+- CNN : gzip으로 압축 / css, js 모두 압축
+
+
+
 
 
 
