--- a/_posts/2016-12-20-웹 사이트 최적화 기법.md
+++ b/_posts/2016-12-20-웹 사이트 최적화 기법.md
@@ -5,12 +5,7 @@ tags:
 ---
 
 # 들어가며
-<<웹 사이트 최적화 기법>>은 웹 사이트의 성능을 높이기 위한 열 네 가지 방법을 소개하고 있다. 책은 명저이지만, 초판이 2008년도에 출간되어서
-현재 웹 환경에 맞는 부분도 있고, 그렇지 않은 부분도 있다고 생각한다.
-예를 들면, CSS Expression을 피하라는 지침이 있는데, 아직까지 일을 하면서 CSS Expression을 사용하는 곳을 찾지 못한 거 같다.
-
-이러한 자의적인 규정을 통해, 열 네 가지 방법 중에 현재에는 비중이 조금 떨어진다고 생각하는 규칙을 쳐내고 남은 규칙들을 정리한 후에, 현대 브라우저에서도
-이런 규칙들이 제대로 동작하는지 알아보는 것이 이 포스팅의 목표이다.
+<<웹 사이트 최적화 기법>>은 웹 사이트의 성능을 높이기 위한 열 네 가지 방법을 소개하고 있다. 그 중에 몇 가지 주제를 추려내고, 관련된 부분만 따로 정리하였다.
 
 # HTTP 요청을 줄여라
 페이지 디자인 변경 없이 HTTP 요청을 줄이는 방법에 대해 이야기하고 있다. 주로 이미지 파일을 여러 번 요청하는 대신에, 한 번만 요청하여
@@ -40,7 +35,7 @@ tags:
     - 페이지가 여러 개인 웹 페이지에서는 주로 열두 개 가량의 모듈 조합이 필요함 (경험적)
 
 ## 최근에는
-더 중요해졌다. 이유는 다음과 같다.
+요청을 줄이는 게 더 중요해 진 거 같다.
 
 - 글로벌 서비스에서는 레이턴시를 줄일 방법이 없기 때문
     - 클라이언트가 뉴욕, 서버가 런던에 있는 경우 TCP 커넥션을 맺게 되면 최소 56ms가 소비됨
@@ -50,7 +45,7 @@ tags:
 
 - 요청을 맺고 끊는데 드는 비용이 크기 때문(Three-hand shake)
 
-![request_process]({{ site.url }}/asset/20161219_004018.jpg)
+![request_process]({{ site.url }}/asset/20161219_004208.jpg)
 
 
 ### 서버 개선 방안
