modify optimize post

--- a/_posts/2016-12-20-웹 사이트 최적화 기법.md
+++ b/_posts/2016-12-20-웹 사이트 최적화 기법.md
@@ -51,6 +51,8 @@ tags:
 ### 서버 개선 방안
 - 파이프라이닝
     - 파이프라이닝은 구현하기가 어려움
+    - HOL 이슈 존재함
+    	- 패킷의 라인이 첫 번째 패킷에 의해 블록될 때 발생함
 - 도메인 샤딩
     - 한 도메인당 최대 두 개 까지의 커넥션이 가능했지만, 현재는 일반적으로 최대 여섯 개까지의 병렬 커넥션 가능
     - 현재는 성능 이슈 때문에 잘 사용하지 않음.
@@ -80,6 +82,7 @@ tags:
     - 이외에도 다양한 기능 제공
         - 로더
         - 모듈 의존성 관리
+
 
 # 헤더에 만료기간을 추가하라
 헤더에 만료기한을 추가하여 구성요소를 캐시에 저장할 수 있다. 헤더 만료기산은 스크립트, 스타일시트, 플래시와 같은 모든 구성요소에서 사용하는 것이 좋다.
@@ -164,6 +167,7 @@ Content-Encoding: gzip
 - CNN : gzip으로 압축 / css, js 모두 압축
 - 구글 : gzip으로 압축 / css, js 모두 압축
 
+
 # 스타일시트는 위에 넣어라
 페이지의 헤더, 내비게이션 바, 상위의 로고 등의 다운로드 되는 대로 바로 그릴 수 있어야 한다.
 스타일시트를 페이지 하단에 넣으면, 브라우저는 스타일이 변경되었을 경우 다시 그려야 하는 것을 피하기 위해 랜더링을 하지 않고 기다린다.
@@ -179,10 +183,18 @@ Content-Encoding: gzip
 	- CSS 파일이 여러 개라면 한 개로 합치면 좋다. 파일이 여러 개면 여러 번 리퀘스트 해야 하기 때문
 2. CSS 가 작은 경우, 페이지의 상단에 <style></style> 테그를 이용하여 CSS 를 HTML안에 둔다
 3. @import url("style.css")와 같은 건 사용하지 않는다. (link보다 느리다. 화면 하단에 스타일시트를 두는 것과 같음)
-4. <div style="..."> 를 사용하지 않는다.
+4. \<div style="..."\> 를 사용하지 않는다.
     - 코드 중복이 발생한다.
-    - Content Security Policy([link](https://www.w3.org/TR/CSP/)를 위반한다.
+    - Content Security Policy([link](https://www.w3.org/TR/CSP/))를 위반한다.
        - 문서에 사용자가 스타일을 수정할 수 있는 경우엔, 교차 스타일 공격을 받을 수 있음(사이트의 로그인 버튼을 변경한다던지...)
+
+~~~
+Mitigate the risk of content-injection attacks by giving developers fairly granular control over
+1. The resources which can be requested (and subsequently embedded or executed) on behalf of a specific Document or Worker
+2. The execution of inline script
+3. Dynamic code execution (via eval() and similar constructs)
+4. The application of inline style
+~~~
 
 
 # 스크립트는 아래에 넣어라
