--- a/_posts/2017-02-19-밑바닥부터 시작하는 딥러닝_신경망.md
+++ b/_posts/2017-02-19-밑바닥부터 시작하는 딥러닝_신경망.md
@@ -26,7 +26,7 @@ tags:
 이하 0 / 1 / 2 층이라고 표현
 
 ### 퍼셉트론 복습
-![퍼셉트론]({{ site.url }}/asset/perceptron.jpg)
+![퍼셉트론]({{ site.url }}/asset/perceptron.png)
 
 ~~~
 y = 0 (b + w1x1 + w2x2 <= 0)
