--- a/_posts/2017-02-19-밑바닥부터 시작하는 딥러닝_신경망.md
+++ b/_posts/2017-02-19-밑바닥부터 시작하는 딥러닝_신경망.md
@@ -10,6 +10,7 @@ tags:
 ## 복습
 좋은 소식
 - 퍼셉트론으로 아주 복잡한 함수도 표현할 수 있다 (이론적으로 NAND 만 가지고도 컴퓨터 구현 가능)
+
 나쁜 소식
 - 가중치를 설정하는 작업은 사람이 손으로 하여야 함
 
@@ -117,9 +118,15 @@ y = h(a)
 import numpy as np
 X = np.array([1,2])
 W = np.array([[1,3,5],[2,4,6]])
-Y = np.dot(X, W)
+Y = np.dot(X, W) # array([ 5, 11, 17])
 ~~~
 
+- 1차원 백터는 shape 한 값에 따라 앞뒤로 올 때 곱의 값이 달라진다.
+- 위의 식에서 np.dot(X, W) 는 (1,2) * (2,3)이므로 (1,3) 형태의 배열이 리턴됨
+- 반대로 np.dot(W, X)를 하면 (2,3) * (2, 1) 이여서 차원이 맞지 않아 곱을 할 수 없다.
+	- ValueError: shapes (2,3) and (2,) not aligned: 3 (dim 1) != 2 (dim 0)
+	- 위의 에러 메시지 발생
+	
 ## 3층 신경망 구성하기
 - 3층 신경망에서 구행하는 입력부터 출력까지의 처리를 구현할 예정
 - 넘파이의 다차원 배열 사용
@@ -182,7 +189,8 @@ print(Y) # [ 0.57444252  0.66818777  0.75026011]
 - 신경망은 분류와 회귀 모두에서 사용 가능
 - 어떤 문제를 푸느냐에 따라 출력층에서 사용하는 활성화 함수가 달라짐
 - 일반적으로 회귀에는 항등 함수를, 분류에는 소프트맥스 함수를 사용
-
+	- 소프트맥스 함수를 이용하면 그 클래스에 속할 확률을 구할 수 있기 때문이다.
+		
 분류 : 데이터가 어느 클래스에 속하는가? (사진 속 인물의 성별 구분, 고양이와 강아지 구분...)
 회귀 : 입력 데이터에서 연속적인 수치를 예측(사진 속 인물의 몸무게는?)
 
@@ -212,6 +220,7 @@ np.exp(a - c) / np.sum(np.exp(a - c))
 ~~~
 
 그렇기 때문에 입력값 중 가장 큰 값을 기준으로 - 하여 함수를 개선할 수 있다.
+
 ~~~python
 def softmax(a):
     c = np.max(a)
@@ -234,12 +243,26 @@ def softmax(a):
 - 입력 이미지를 숫자 0 ~ 9 중 하나로 분류한다면, 출력층의 뉴런을 10개로 정하면 된다.
 
 ## 손글씨 숫자 인식
+
+### MNIST 데이터셋
 - 데이터는 MNIST 데이터셋 사용(https://github.com/WegraLee/deep-learning-from-scratch)
 - 추론을 구성하는 신경망 구현할 차례
 - 입력층 뉴런을 784개, 출력층 뉴런은 10개로 구성
     - 입력층이 28 * 28 = 784, 출력층은 0~ 9 이므로 10개
 - 은닉층은 두 개로, 첫번째 은닉층에는 50개 두번째 은닉층에는 100개의 뉴런을 배치할 것임(임의의 숫자)
+- load_mnist 는 세 가지 파라미터가 있음
+	- normalize : 
+		- 입력 이미지의 픽셀 값을 0 ~ 1로 정규화한다. 
+		- False : 0 ~ 255 사이 값 유지한다.
+	- flatten : 
+		- 입력 이미지를 784개의 원소를 지닌 1차원 배열로 만든다. 
+		- False : 입력 이미지를 1 * 28 * 28 의 3차원 배열로 설정한다.
+	- one_hot_label
+		- 데이터를 원-핫-인코딩 형태로 저장한다. (정답을 뜻하는 원소만 1(hot). 나머지는 모두 0)
+		- False : '7'이나 '2'와 같이 숫자 형태의 레이블을 저장한다.
 
+
+### 신경망의 추론 처리
 ~~~python
 def get_data() :
     (x_train, t_train), (x_test, t_test) = load_mnist(flatten=True, normalize=True, one_hot_label=False)
@@ -265,3 +288,85 @@ def predict(network, x):
     return y
 ~~~
 
+
+~~~python
+x, t = get_data() # 데이터셋을 얻는다. (mnist 데이터셋을 읽어온다)
+network = init_network() # 네트워크를 형성한다. (학습된 가중치 매개변수를 읽는다)
+
+accuracy_cnt = 0
+for i in range(len(x)):
+	y = predict(network, x[i]) # 예측한다.
+	p = np.argmax(y) # 가장 확률이 높은 인덱스를 얻는다. (softmax 로 리턴하기 때문에 확률 파악 가능)
+	if p == t[i]: # 예측 성공
+		accuracy_cnt += 1
+		
+print("Accuracy:" + str(float(accuracy_cnt) / len(x)))
+~~~
+
+코드를 실행시켜 보면 결과는 다음과 같다.
+
+~~~
+Downloading train-images-idx3-ubyte.gz ...
+Done
+Downloading train-labels-idx1-ubyte.gz ...
+Done
+Downloading t10k-images-idx3-ubyte.gz ...
+Done
+Downloading t10k-labels-idx1-ubyte.gz ...
+Done
+Converting train-images-idx3-ubyte.gz to NumPy Array ...
+Done
+Converting train-labels-idx1-ubyte.gz to NumPy Array ...
+Done
+Converting t10k-images-idx3-ubyte.gz to NumPy Array ...
+Done
+Converting t10k-labels-idx1-ubyte.gz to NumPy Array ...
+Done
+Creating pickle file ...
+Done!
+Accuracy:0.9352
+~~~
+
+- 지속적으로 정확도를 향상시켜 나갈 예정
+- 이 예제에서는 normalize를 True로 설정했는데, 이렇게 하면 데이터를 0-1 범위로 변환하는 전처리 수행하게 됨. 이런 과정을 정규화라고 함
+	- 전처리를 하여 식별 능력을 개선하는 사례는 많이 제시되고 있음
+	- 현업에서는 데이터의 분포를 고려해 전처리하는 경우가 많다.
+		- 평균과 표준편차를 이용하여 데이터들이 0을 중심으로 분포하도록 이동시킨다던지...
+
+### 배치 처리
+- 이미지 여러 장을 한꺼번에 입력하는 경우를 고려해 보자
+- 예를 들면 100장을 한꺼번에 입력했다던지?
+
+|           | X         | W1       | W2       | W3       | Y        |
+|-----------|-----------|----------|----------|----------|----------|
+| input 1   | 784       | 784 * 50 | 50 * 100 | 100 * 10 | 10       |
+| input 100 | 100 * 784 | 784 * 50 | 50 * 100 | 100 * 10 | 100 * 10 |
+
+
+- 100장 입력 데이터가 한 번에 출력됨
+	- x[0], y[0] 에는  0번째 이미지와 추론 결과
+	- x[1], y[1] 에는 1번째 이미지와 추론 결과 
+- 배치로 한꺼번에 처리하면 효율성이 올라감
+	- 이미지 한장당 처리 시간을 대폭 줄여준다.
+	- 디스크 I/O가 줄면서 데이터 병목되는 지점이 줄어든다.
+
+배치가 적용된 코드는 다음과 같다.
+
+~~~python
+x, t = get_data() 
+network = init_network()
+
+batch_size = 100 # 배치 크기
+accuracy_cnt = 0
+
+for i in range(0, len(x), batch_size): # 0에서 len(x)까지 batch_size 의 인덱스 배열 반환
+	x_batch = x[i:i+batch_size] # 반환받은 곳부터 batch_size 만큼 자름
+	y_batch = predict(network, x_batch) # 예측한다.
+	p = np.argmax(y_batch, axis=1) # 각각 배열에서 최대값의 인덱스 리턴
+	accuracy_cnt += np.sum(p == t[t:t+batch_size]) # boolean 배열 생성하여 True 만 카운트. t는 get_data()에서 가져온 정확한 데이터 수치
+		
+print("Accuracy:" + str(float(accuracy_cnt) / len(x)))
+~~~
+		
+## 정리
+- 신경망은 각 층의 뉴런이 다음 층의 뉴런으로 신호를 전달. 퍼셉트론과 다른 점은 활성화 함수가 다름. 
