--- a/_posts/2017-02-19-밑바닥부터 시작하는 딥러닝_신경망.md
+++ b/_posts/2017-02-19-밑바닥부터 시작하는 딥러닝_신경망.md
@@ -190,9 +190,8 @@ print(Y) # [ 0.57444252  0.66818777  0.75026011]
 - 어떤 문제를 푸느냐에 따라 출력층에서 사용하는 활성화 함수가 달라짐
 - 일반적으로 회귀에는 항등 함수를, 분류에는 소프트맥스 함수를 사용
 	- 소프트맥스 함수를 이용하면 그 클래스에 속할 확률을 구할 수 있기 때문이다.
-		
-분류 : 데이터가 어느 클래스에 속하는가? (사진 속 인물의 성별 구분, 고양이와 강아지 구분...)
-회귀 : 입력 데이터에서 연속적인 수치를 예측(사진 속 인물의 몸무게는?)
+- 분류 : 데이터가 어느 클래스에 속하는가? (사진 속 인물의 성별 구분, 고양이와 강아지 구분...)
+- 회귀 : 입력 데이터에서 연속적인 수치를 예측(사진 속 인물의 몸무게는?)
 
 ### 항등 함수와 소프트맥스 함수 구현하기
 - 항등 함수는 입력을 그대로 출력한다.
@@ -338,7 +337,7 @@ Accuracy:0.9352
 - 예를 들면 100장을 한꺼번에 입력했다던지?
 
 |           | X         | W1       | W2       | W3       | Y        |
-|-----------|-----------|----------|----------|----------|----------|
+|:---------:|:---------:|:--------:|:--------:|:--------:|:--------:|
 | input 1   | 784       | 784 * 50 | 50 * 100 | 100 * 10 | 10       |
 | input 100 | 100 * 784 | 784 * 50 | 50 * 100 | 100 * 10 | 100 * 10 |
 
