--- a/_posts/2017-03-19-오차역전파법(5장).md
+++ b/_posts/2017-03-19-오차역전파법(5장).md
@@ -25,10 +25,12 @@ tags:
 
 > 현빈 군은 슈퍼에서 1개에 100원인 사과를 2개 샀습니다. 이때 지불금액을 구하시오, 단 소비세가 10% 부과됩니다.
 
-graph LR;
-    사과-->|100|x2;
-    x2-->|200|x1.1;
-    x1.1-->|220|금액;
+    <div class="mermaid">
+    graph LR;
+        사과-->|100|x2;
+        x2-->|200|x1.1;
+        x1.1-->|220|금액;
+    </div>
 
 최초에 사과를 두 개 사고, 소비세를 곱한 값이 답이 됩니다.(220원).
 위의 그래프에서는 x2와 x1.1을 각각 하나의 연산으로 취급했지만, 곱하기만을 연산으로 취급할수도 있습니다. 이렇게 하면 곱한 값 또한 변수가 되어 원 밖에 위치하게 됩니다.
