--- a/_posts/2017-03-19-오차역전파법(5장).md
+++ b/_posts/2017-03-19-오차역전파법(5장).md
@@ -35,12 +35,14 @@ graph LR;
 최초에 사과를 두 개 사고, 소비세를 곱한 값이 답이 됩니다.(220원).
 위의 그래프에서는 x2와 x1.1을 각각 하나의 연산으로 취급했지만, 곱하기만을 연산으로 취급할수도 있습니다. 이렇게 하면 곱한 값 또한 변수가 되어 원 밖에 위치하게 됩니다.
 
+<div class="mermaid">
 graph LR;
     사과-->|100|x;
     개수-->|2|x;
     x-->y;
     소비세-->|1.1|y;
     y-->|220|결과;
+</div>
 
 위와 같이 식을 구성할 수 있습니다.
 
@@ -70,6 +72,7 @@ graph LR;
 
 그래프로 표현하면 다음과 같은 방식으로 구할 수 있습니다.
 
+<div class="mermaid">
 graph LR;
     사과-->|100|x;
     개수-->|2|x;
@@ -79,6 +82,7 @@ graph LR;
     결과-->|1|y;
     y-->|1.1|x;
     x-->|2.2|사과;
+</div>
 
 이 그래프에서 결과->y->x->사과로 흘러가는 배수가, 역전파를 통해 구한 미분 값입니다. 즉, 1 -> 1.1 -> 2.2 순으로 미분 값을 전달하였고, 최종적으로 사과 가격에 대한 지불 금액의 미분은 2.2 라고 할 수 있습니다.
 이 말은 사과 값이 아주 조금 오르면, 최종 금액은 그 값의 2.2 배만큼 오른다는 뜻입니다.
@@ -87,11 +91,13 @@ graph LR;
 순전파는 계산 결과를 왼쪽에서 오른쪽으로 전달했지만, 역전파는 반대로 오른쪽에서 왼쪽으로 결과값을 전달합니다. 이 미분값을 전달하는 원리는 연쇄법칙에 따른 것입니다.
 
 ### 계산 그래프의 역전파
+<div class="mermaid">
 graph LR;
     인풋 -->|x|B["F(x)"]
     B["F(x)"] --> |y|결과
     결과 --> |E|B["F(x)"]
     B["F(x)"] --> |Ey/x|인풋
+</div>
 
 y = f(x)라는 함수의 역전파를 그래프로 그려보았습니다. 역전파의 계산 절차는 다음과 같습니다.
 
@@ -120,20 +126,24 @@ t^2을 미분하면 2t이고, t를 미분하면 1입니다.
 ### 연쇄법칙과 계산 그래프
 연쇄법칙 계산을 계산 그래프로 나타내 보겠습니다. 2제곱 계산을 **2 노드로 나타내면, 다음과 같이 표현할 수 있습니다.
 
+<div class="mermaid">
 graph LR;
-input1 -->|x|+
-input2 -->|y|+
-+ --> |t|**2
+    input1 -->|x|+
+    input2 -->|y|+
+    + --> |t|**2
+</div>
 
 이렇게 생긴 그래프에서, 반대 방향으로 그 노드의 편미분을 수행한 값 * 위에서 흘러 내려온 값을 곱하면 됩니다.
 즉, 역전파를 수행한 결과는 다음과 같습니다.
 
+<div class="mermaid">
 graph LR;
-input1 -->|x|+
-input2 -->|y|+
-+ -->|t|**2
-**2 -->|1|+
-+ -->|2xy*1|input1
+    input1 -->|x|+
+    input2 -->|y|+
+    + -->|t|**2
+    **2 -->|1|+
+    + -->|2xy*1|input1
+</div>
 
 ## 역전파
 그러면, +와 *의 예를 들어 역전파의 구조를 설명해 보겠습니다.
@@ -141,10 +151,12 @@ input2 -->|y|+
 ### 덧셈 노드의 역전파
 z = x + y 라는 식을 대상으로, 역전파를 살펴보겠습니다. 그래프를 그리면 다음과 같은 모양이 될 것입니다.
 
+<div class="mermaid">
 graph LR;
-input1 -->|x|+
-input2 -->|y|+
-+ -->|z|output
+    input1 -->|x|+
+    input2 -->|y|+
+    + -->|z|output
+</div>
 
 x + y 의 식에 대해, input1로 가는 노드는 x를 기준으로 편미분을 하므로, y가 사라지면서 1이 남게 됩니다.
 input2로 가는 노드는 y 를 기준으로 편미분을 하므로, x가 사라지면서 1이 남게 된다. 따라서, + 노드를 대상으로 하는 역전파는 결과적으로 입력받은 데이터를 그대로 흘려주게 됩니다.
@@ -158,19 +170,23 @@ z = xy라는 식을 생각해보자. 이 식의 미분은 다음과 같습니다
 해석학적으로 다음과 같이 미분이 되므로, 그래프로 보았을 때는 이웃 노드의 데이터 * 위에서 흘러내려온 데이터가 내려감을 알 수 있습니다.
 간단한 예제로 그래프를 그려보면 다음과 같습니다.
 
+<div class="mermaid">
 graph LR;
-input1 -->|10|*
-input2 -->|5|*
-* -->|50|output
+    input1 -->|10|*
+    input2 -->|5|*
+    * -->|50|output
+</div>
 
 이런 그래프가 있고, 역전파 시 상류에서 1.3이라는 값이 흘러내려온다고 가정하면, 역전파 그래프는 다음과 같이 나오게 됩니다.
 
+<div class="mermaid">
 graph LR;
-input1 -->|10|*
-input2 -->|5|*
-* -->|50|output
-* -->|6.5|input1
-output -->|1.3|*
+    input1 -->|10|*
+    input2 -->|5|*
+    * -->|50|output
+    * -->|6.5|input1
+    output -->|1.3|*
+</div>
 
 즉, 곱하기 노드에서는 순전파 때의 입력 신호들에 '서로 바꾼 값'을 곱하여 하류로 보내게 됩니다.
 
@@ -178,7 +194,7 @@ output -->|1.3|*
 이번 장에서는 '사과 쇼핑'예를 파이썬으로 구현합니다. 계산 그래프의 곱셈 노드는 'MulLayer', 덧셈 노드는 'AddLayer'라는 이름으로 구현합니다.
 
 모든 계층은 forward()와 backward()라는 공통의 메서드를 갖도록 구현할 것입니다. 해당 메서드는 인터페이스 형태로 구현할 것입니다. forward는 순전파, backward는 역전파를 처리합니다.
-그럼 먼저 곱셈 계층을 클래스로 구현해보자
+그럼 먼저 곱셈 계층을 클래스로 구현해 보겠습니다.
 
 ~~~python
 class MulLayer:
@@ -201,14 +217,16 @@ class MulLayer:
 2. forward에서는 x,y를 인수로 받아서 두 값을 곱해서 반환한다.
 3. backward에서는 입력받은 미분값(dout) 에 순전파의 값을 바꿔서 곱한다.
 
-이상의 MulLayer의 구현이고, 이를 이용하여 앞에서 본 사과 쇼핑을 구현할 수 있다. 그래프를 다시 한번 확인해 보자
+이상의 MulLayer의 구현이고, 이를 이용하여 앞에서 본 사과 쇼핑을 구현할 수 있습니다. 그래프를 다시 한번 확인해 보겠습니다.
 
+<div class="mermaid">
 graph LR;
     사과-->|100|x;
     개수-->|2|x;
     x-->y;
     소비세-->|1.1|y;
     y-->|220|결과;
+</div>
 
 우선 순전파를 구현해 보자
 
