--- a/_posts/2017-03-31-학습 관련 기술들.md
+++ b/_posts/2017-03-31-학습 관련 기술들.md
@@ -29,7 +29,7 @@ tags:
 ### 확률적 경사 하강법(SGD)
 먼저 고전적인 방법인 SGD를 다시 한번 확인해 보겠습니다. 수식으로는 다음과 같이 쓸 수 있습니다.
 
-\\[ W\xleftarrow {  } W-\eta \frac { \sigma L }{ \sigma W } //]
+\[ W\xleftarrow {  } W-\eta \frac { \sigma L }{ \sigma W } /]
 
 
 여기에서 W는 갱신할 가중치 매개변수이고, \\( \frac { \sigma L }{ \sigma W } \\) 는 W에 대한 손실 함수의 기울기입니다.
