--- a/_posts/2017-03-31-학습 관련 기술들.md
+++ b/_posts/2017-03-31-학습 관련 기술들.md
@@ -66,7 +66,7 @@ SDG는 구현은 쉽지만, 문제에 따라 비효율적일 때가 있습니다
 ### 모멘텀
 이 기법은 수식으로는 다음과 같이 나타낼 수 있습니다.
 
-\\[ \upsilon \quad \xleftarrow {  } \alpha \upsilon \quad -\quad \eta \frac { \sigma L }{ \sigma W } \\]
+\\[ \upsilon \quad \xleftarrow {  } \alpha \upsilon -\eta \frac { \sigma L }{ \sigma W } \\]
 
 위에서 갱신한 v값을 가지고 아래 W를 갱신합니다.
 
@@ -114,4 +114,54 @@ class Momentum:
 
 수식으로는 다음과 같습니다.
 
+\\[ h\quad \xleftarrow {  } h+\frac { \sigma L }{ \sigma W } \circledcirc \frac { \sigma L }{ \sigma W } \\]
+
+\\[ W\xleftarrow {  } W-\eta \frac { 1 }{ \sqrt { h }  } \frac { \sigma L }{ \sigma W } \\]
+
+- W : 갱신할 가중치 매개변수
+- \\( \frac { \sigma L }{ \sigma W } \\) : W에 대한 손실 함수의 기울기
+- h : 기존 기울기 값을 계속 제곱하여 더해준 값
+
+이런 후에 매개변수를 갱신할 때, \\( \frac { 1 }{ \sqrt { h }  } \\)를 곱해 학습률을 조정합니다. 즉, 많이 갱신된 함수는 학습률 \\( \eta \\)가 낮아지게 되는 것입니다.
+
+또한, AdaGrad는 과거의 기울기를 계속 제곱하여 더해가기 때문에, 학습을 진행할수록 갱신 강도가 약해집니다. 어느 순간 갱신량이 0이 되어서 전혀 갱신되지 않게 됩니다. 이를 개선한 기법으로 RMSProp이 있는데, 이는 먼 과거의 기울기는 서서히 잊고 새로운 기울기 정보를 크게 반영하는 학습 방법입니다.
+
+코드는 다음과 같습니다.
+
+~~~python
+class AdaGrad:
+	def __init__(self, lr=0.01):
+		self.lr = lr
+		self.h = None
+		
+	def update(self, paras, grads):
+		if self.h is None
+			self.h = {}
+			for key, val in params.items():
+				self.h[key] = np.zeros_like(val)
+		
+		for key in params.keys():
+			self.h[key] += grads[key] * grads[key]
+			paras[key] -= self.lr * grads[key] / (np.sqrt(self.h[key]) + 1e-7)			# 계속 제곱하다 보면 self.h[key]값이 0이 될 수 있기 때문에, 이를 막기 위해 1e-7을 더해준다.
+~~~
+
+이를 통해 최적화 문제를 풀면, 맨 처음에는 y축 방향으로 크게 움직이지만, 학습 강도가 크기 때문에, 갱신 강도도 큰 폭으로 줄어듭니다. 따라서 y축으로 갱신 강도가 약해져 지그재그 움직임이 줄어듭니다.
+
+### Adam
+모멘텀은 공이 구르는 듯한 물리 법칙을 따르는 움직임을 보였습니다.
+AdaGrad는 매개변수의 원소마다 적응적으로 갱신 강도를 조정했습니다. 이 두 기법을 융합한 것이 Adam입니다.
+
+이 글에서는 직관적으로만 설명하겠습니다. 필요하다면 해당 논문 확인 부탁 드립니다.
+
+Adam또한 갱신 과정도 그릇에서 공이 구르는 듯 움직입니다.
+
+### 어떤 갱신 방법을 이용할 것인가?
+풀어야 할 문제에 따라 어떤 갱신 기법을 사용할지 달라집니다. 각각의 장단이 있어서 잘 푸는 문제와 서툰 문제가 있습니다.
+
+지금도 많은 연구에서 SGD를 사용하고 있고, 모멘텀과 AdaGrad도 시도해볼 만한 가치가 있습니다. 또한 요즘에는 많은 분들이 Adam에 만족해하고 계십니다. 각자의 상황을 고려하여 여러 가지 시도해보고, 가장 효율적인 것을 사용하면 될 거 같습니다.
+
+## 가중치의 초깃값
+신경망 학습에서 특히 중요한 것이 가중치의 초깃값입니다. 권장하는 가중치 초깃값과 실험을 통해 실제로 어떻게 초깃값이 신경망 학습에 영향을 미치는지 확인할 예정입니다.
+
+### 초깃값을 0으로 하면?
 
