--- a/_posts/2017-04-01-학습 관련 기술들.md
+++ b/_posts/2017-04-01-학습 관련 기술들.md
@@ -226,7 +226,7 @@ He 초깃값을 사용하면, 활성화 함수 결과값이 모든 층에 균일
 미니배치 단위로 정규화를 진행하는데, 데이터 분포가 평균이 0, 분산이 1이 되도록 정규화합니다.
 수식으로는 다음과 같습니다.
 
-\\[ { \mu  }_{ B }\xleftarrow {  } \frac { 1 }{ m } \sum _{ i=1 }^{ m }{ { x }_{ i } } \\]
+\\[ { \mu  }\_{ B }\xleftarrow {  } \frac { 1 }{ m } \sum \_{ i=1 }^{ m }{ { x }_{ i } } \\]
 
 \\[ { \sigma  }_{ B }^{ 2 }\xleftarrow {  } \frac { 1 }{ m } \sum _{ i=1 }^{ m }{ { (x }_{ i }- } { { \mu  }_{ B }) }^{ 2 } \\]
 
