--- a/_posts/2017-04-01-학습 관련 기술들.md
+++ b/_posts/2017-04-01-학습 관련 기술들.md
@@ -228,15 +228,15 @@ He 초깃값을 사용하면, 활성화 함수 결과값이 모든 층에 균일
 
 \\[ { \mu  }\_{ B }\xleftarrow {  } \frac { 1 }{ m } \sum \_{ i=1 }^{ m }{ { x }_{ i } } \\]
 
-\\[ { \sigma  }_{ B }^{ 2 }\xleftarrow {  } \frac { 1 }{ m } \sum _{ i=1 }^{ m }{ { (x }_{ i }- } { { \mu  }_{ B }) }^{ 2 } \\]
+\\[ { \sigma  }\_{ B }^{ 2 }\xleftarrow {  } \frac { 1 }{ m } \sum \_{ i=1 }^{ m }{ { (x }\_{ i }- } { { \mu  }_{ B }) }^{ 2 } \\]
 
-\\[ { x }_{ i }\xleftarrow {  } \frac { { x }_{ i }-{ \mu  }_{ B } }{ \sqrt { { \sigma  }_{ B }^{ 2 }+\varepsilon  }  } \\]
+\\[ { x }\_{ i }\xleftarrow {  } \frac { { x }\_{ i }-{ \mu  }\_{ B } }{ \sqrt { { \sigma  }_{ B }^{ 2 }+\varepsilon  }  } \\]
 
 미니배치 m개의 입력 데이터에 대해 평균과 분산을 구하고, 그 값을 가지고 어파인 출력값을 평균 0, 분산 1인 데이터로 정규화하는 식입니다.
 
 또한 배치 정규화 계층마다, 정규화된 데이터에 확대와 이동 변환을 수행합니다. 수식으로는 다음과 같습니다.
 
-\\[ { y }_{ i }\xleftarrow {  } \gamma { x }_{ i }+\beta \\]
+\\[ { y }\_{ i }\xleftarrow {  } \gamma { x }_{ i }+\beta \\]
 
 \\( \gamma \\)가 확대를, \\( \beta \\)가 이동을 담당하는데요. 두 값은 처음에는  \\( \gamma \\)=1, \\( \beta \\)=0부터 시작합니다. 즉, 원본 그대로 시작하다가 학습하면서 적합한 값으로 조절해 나갑니다.
 
