--- a/_posts/2017-03-19-오차역전파법(5장).md
+++ b/_posts/2017-03-19-오차역전파법(5장).md
@@ -21,7 +21,7 @@ tags:
 계산 그래프는 계산 과정을 그래프로 나타낸 자료구조로, 복수의 노드와 에지로 표현됩니다.
 
 ### 계산 그래프 테스트
-간단한 문제가 주어졌다. 그래프를 통해 풀어보겠습니다.
+간단한 문제가 주어졌습니다. 그래프를 통해 풀어보겠습니다.
 
 > 현빈 군은 슈퍼에서 1개에 100원인 사과를 2개 샀습니다. 이때 지불금액을 구하시오, 단 소비세가 10% 부과됩니다.
 
@@ -228,7 +228,7 @@ graph LR;
     y-->|220|결과;
 </div>
 
-우선 순전파를 구현해 보자
+우선 순전파를 구현해 보겠습니다.
 
 ~~~python
 apple = 100
@@ -246,7 +246,7 @@ price = mul_tax_layer.forward(apple_price, tax)
 print(price) # 220
 ~~~
 
-각 변수에 대한 미분은 backward() 에서 구할 수 있다.
+각 변수에 대한 미분은 backward() 에서 구할 수 있습니다.
 
 ~~~python
 # 역전파
