--- a/_posts/2017-04-01-학습 관련 기술들.md
+++ b/_posts/2017-04-01-학습 관련 기술들.md
@@ -147,13 +147,73 @@ class AdaGrad:
 
 이를 통해 최적화 문제를 풀면, 맨 처음에는 y축 방향으로 크게 움직이지만, 학습 강도가 크기 때문에, 갱신 강도도 큰 폭으로 줄어듭니다. 따라서 y축으로 갱신 강도가 약해져 지그재그 움직임이 줄어듭니다.
 
+### RMSprop
+AdaGrad와 흡사하지만, 과거의 기울기를 계속 제곱하여 더해가지 않고, 먼 과거의 기울기는 서서히 잊고 새로운 기울기 정보를 반영하는 학습 방법입니다. 여기서는 decay_rate라는 값이 등장합니다.
+이 값은 시간이 지날수록 얼마나 값을 decay하는지를 나타내는 값입니다. 이 값이 클수록 이전 기울기는 더 빨리 잊고, 새로운 기울기 정보를 더 많이 반영하게 됩니다.
+decay는 보통 0.9 혹은 0.95로 둡니다.
+
+~~~python
+ def __init__(self, lr=0.01, decay_rate = 0.99):
+        self.lr = lr
+        self.decay_rate = decay_rate
+        self.h = None
+
+    def update(self, params, grads):
+        if self.h is None:
+            self.h = {}
+            for key, val in params.items():
+                self.h[key] = np.zeros_like(val) # 맨 처음에 들어온 경우, h 값을 0으로 초기화한다.
+
+        for key in params.keys():
+            self.h[key] *= self.decay_rate # decay_rate를 곱한다. decay_rate를 계속 곱하기 때문에 오래 전에 누적된 기울기는 영향력이 점점 작아진다.
+            self.h[key] += (1 - self.decay_rate) * grads[key] * grads[key] # 기울기를 제곱한다. 최근에 추가된 기울기가 더 큰 영향을 미치게 된다. 업데이트는 (1-decay_rate) 만큼 수행한다. 이를 지수이동평균이라고 한다(http://zetawiki.com/wiki/%EC%A7%80%EC%88%98_%EC%9D%B4%EB%8F%99_%ED%8F%89%EA%B7%A0) 이 코드에서 식의 알파값은 0.01이 된다.
+            params[key] -= self.lr * grads[key] / (np.sqrt(self.h[key]) + 1e-7) # 1e-7은 0으로 나눠지는 것을 막기 위해 더해주는 값
+~~~
+
 ### Adam
 모멘텀은 공이 구르는 듯한 물리 법칙을 따르는 움직임을 보였습니다.
-AdaGrad는 매개변수의 원소마다 적응적으로 갱신 강도를 조정했습니다. 이 두 기법을 융합한 것이 Adam입니다.
+RMSprop은 매개변수의 원소마다 적응적으로 갱신 강도를 조정하였습니다. RMSprop에 모멘텀을 도입한 것이 Adam입니다.
 
-이 글에서는 직관적으로만 설명하겠습니다. 필요하다면 해당 논문 확인 부탁 드립니다.
+코드는 다음과 같습니다.
+
+~~~python
+   def __init__(self, lr=0.001, beta1=0.9, beta2=0.999): # 논문에서 추천하는 초모수값
+        self.lr = lr
+        self.beta1 = beta1
+        self.beta2 = beta2
+        self.iter = 0
+        self.m = None
+        self.v = None
+
+    def update(self, params, grads):
+        if self.m is None:
+            self.m, self.v = {}, {}
+            for key, val in params.items():
+                self.m[key] = np.zeros_like(val)
+                self.v[key] = np.zeros_like(val)
+
+        self.iter += 1
+		# 회차를 거듭할수록 학습률을 미세하게 줄이는 효과가 있다. 초기에 학습률이 더 많이 줄어들 거 같다.
+        lr_t  = self.lr * np.sqrt(1.0 - self.beta2**self.iter) / (1.0 - self.beta1**self.iter)
+
+        for key in params.keys():
+            #self.m[key] = self.beta1*self.m[key] + (1-self.beta1)*grads[key]
+            #self.v[key] = self.beta2*self.v[key] + (1-self.beta2)*(grads[key]**2)
+            self.m[key] += (1 - self.beta1) * (grads[key] - self.m[key])  # 위의 주석달린 기울기의 지수이동평균을 변화시킨 식
+            self.v[key] += (1 - self.beta2) * (grads[key]**2 - self.v[key]) # 위의 주석달린 기울기의 제곱의 지수이동평균을 변화시킨 식
+
+            params[key] -= lr_t * self.m[key] / (np.sqrt(self.v[key]) + 1e-7)
+
+			# 학습의 초반부에 시행하는 프로세스로 추측됨 - m, v가 0에 가깝게 bisa 되어 있을 거라고 판단하여 unbiased 하게 해주는 작업을 거침
+            #unbias_m += (1 - self.beta1) * (grads[key] - self.m[key]) # correct bias
+            #unbisa_b += (1 - self.beta2) * (grads[key]*grads[key] - self.v[key]) # correct bias
+            #params[key] += self.lr * unbias_m / (np.sqrt(unbisa_b) + 1e-7)
+~~~
 
 Adam또한 갱신 과정도 그릇에서 공이 구르는 듯 움직입니다.
+다음의 블로그 글 또한 좋습니다.
+
+[링크](http://shuuki4.github.io/deep%20learning/2016/05/20/Gradient-Descent-Algorithm-Overview.html)
 
 ### 어떤 갱신 방법을 이용할 것인가?
 풀어야 할 문제에 따라 어떤 갱신 기법을 사용할지 달라집니다. 각각의 장단이 있어서 잘 푸는 문제와 서툰 문제가 있습니다.
@@ -346,6 +406,12 @@ lr = 10 ** np.random.uniform(-6, -2)
 이렇게 무작위로 추출한 값을 가지고 학습을 시작합니다. 그 후에는 다양한 하이퍼파라미터 값으로 학습을 반복하여, 신경망에 좋을 거 같은 값이 어디에 존재하는지 관찰합니다.
 
 여러 번 학습을 한 후에, 학습이 잘 된 모델을 추출하여 그 때의 하이퍼파라미터 값을 확인합니다. 예를 들어, 학습이 잘 진행될 때의 학습률은 0.001~0.01 이고, 가중치 감소 계수는 \\( { 10 }^{ -8 }\~ { 10 }^{ -6 } \\) 이라고 하면, 축소된 값을 가지고 다시 변수를 할당하여 학습을 반복합니다. 이렇게 범위를 좁혀가다가, 특정 단계에서 최종 하이퍼파라미터 값을 선택합니다.
+
+## 베이지안 최적화
+위에서 설명한 하이퍼파라미터 최적화는 경험적인 기법입니다. 일정 범위 내의 랜덤한 하이퍼파라미터 값을 취한 후, 결과값을 보고 하이퍼파라미터의 범위를 점점 줄여 나가기 때문입니다. 반면에, 지금 소개할 베이지안 최적화는
+좀 더 이론적인 기법입니다. 자료를 조사하던 중 찾은 블로그가 설명이 잘 되어 있어, 링크 남깁니다.
+
+[링크](http://sanghyukchun.github.io/99/#gp-with-noisy-data)
 
 ## 정리
 - 매개변수 갱신 방법 : SGD, 모멘텀, AdaGrad, Adam
