--- a/_posts/2017-04-09-합성곱 신경망(CNN).md
+++ b/_posts/2017-04-09-합성곱 신경망(CNN).md
@@ -70,7 +70,8 @@ graph LR;
 | 3 | 0 | 1 | 2 |
 | 2 | 3 | 0 | 1 |
 
-\\[ \begin{table}[]
+\\[ 
+\begin{table}[]
 \centering
 \caption{My caption}
 \label{my-label}
@@ -80,6 +81,7 @@ graph LR;
 0 & 1 & 2 \\ \hline
 1 & 0 & 2 \\ \hline
 \end{tabular}
-\end{table} ]\\
+\end{table} 
+]\\
 
 
