--- a/_posts/2017-04-09-합성곱 신경망(CNN).md
+++ b/_posts/2017-04-09-합성곱 신경망(CNN).md
@@ -70,18 +70,48 @@ graph LR;
 | 3 | 0 | 1 | 2 |
 | 2 | 3 | 0 | 1 |
 
-\\[ 
-\begin{table}[]
-\centering
-\caption{My caption}
-\label{my-label}
-\begin{tabular}{|l|l|l|}
-\hline
-2 & 0 & 1 \\ \hline
-0 & 1 & 2 \\ \hline
-1 & 0 & 2 \\ \hline
-\end{tabular}
-\end{table} 
-]\\
+이 데이터와
+
+| 2 | 0 | 1 |                     
+|---|---|---|
+| 0 | 1 | 2 |                     
+| 1 | 0 | 2 |
+
+이 데이터를 합성곱으로 처리한다고 가정하겠습니다. 이 데이터에서 입력 데이터는 가로, 세로 방향의 형상이고 필터 또한 가로 세로 방향의 형상입니다. 이를 (4, 4) 그리고 (3,3) 이라고 표현합니다. 문헌에 따라 필터를 커널이라고 부르기도 합니다.
+
+합성곱 연산은 필터의 윈도우를 일정 간격으로 이동시키면서 수행합니다. 순서는 다음과 같습니다.
+
+1. 필터의 (0, 0) 부분을 입력 데이터의 (0,0) 부분에 겹칩니다.
+2. 필터와 겹친 부분 데이터를 대응하는 원소끼리 곱해서, 모두 더합니다. 이 과정을 단일 곱샙 누산이라 합니다.
+3. 필터를 일정 거리만큼 우측으로 이동시킵니다. 필터의 우측 끝이 입력 데이터의 마지막과 겹친다면, 다음 라인으로 이동시킵니다.
+4. 위의 과정을 필터가 입력 데이터의 마지막 부분에 도달할때까지 반복합니다.
+
+위의 데이터를 가지고 한번 연산을 수행해 보겠습니다. 3번의 일정 거리는 1로 가정하겠습니다.
+
+1. 필터의 좌상단을 입력 데이터의 (0,0)에 겹치고 연산을 수행합니다.
+- 1*2 + 0*2 + 1*3 + 0*0 + 1*1 + 2*2 + 1*3 + 0*3 +2*1 = 15
+2. 필터를 우측으로 한 칸 이동시킨 뒤,  대응하는 원소끼리 곱한 후 연산을 수행합니다. 
+- 2*2 + 0*3+1*0 +0*1 + 1*2 + 2*3 +1*0 + 0*1 + 2*2 = 16
+3. 필터가 우측 끝에 도달했으므로, 아래로 한칸 이동시킨 뒤 가장 좌측에 붙입니다. 입력 데이터의 (1, 0) 위치입니다.
+4. 연산 수행후 우측으로 한 칸 이동시킵니다. 연산을 수행합니다.
+5. 필터가 우측 끝 마지막 부분에 도달하였으므로 연산을 종료합니다.
+
+필터연산을 거친 데이터를 나타내면 다음과 같은 모양이 됩니다.
+
+| 15 | 16 |
+|----|----|
+| 6  | 15 |
+
+완전연결 신경망에는 편항이 존재하는데, CNN에도 편향이 존재합니다. 연산을 다 수행했다면 편항을 결과값의 모든 원소에 더해줍니다. 만약, 편향이 3이라면 최종 결과값은 다음과 같을 것입니다.
+
+| 18 | 19 |
+|----|----|
+| 9  | 18 |
+
+### 패딩
+합성곱 연산을 수행하기 전에, 데이터 주변을 특정 값으로 채우기도 합니다. 이를 패딩이라고 하며 합성곱 연산에서는 자주 사용하는 기법입니다.
+
+
+
 
 
