--- a/_posts/2017-04-09-합성곱 신경망(CNN).md
+++ b/_posts/2017-04-09-합성곱 신경망(CNN).md
@@ -33,15 +33,15 @@ CNN 또한 비슷합니다. 다만 새로운 계층이 추가됩니다.
 <div class="mermaid">
 graph LR;
     Conv1 -->ReLU1
-    ReLU1 --> Polling1
-    Polling1 --> Conv2
+    ReLU1 --> Pooling1
+    Pooling1 --> Conv2
     Conv2 -->ReLU2
-    ReLU2 --> Polling2
-    Polling2 --> Affine3
+    ReLU2 --> Pooling2
+    Pooling2 --> Affine3
     Affine3 --> softmax
 </div>
 
-새롭게 합성곱 계층(Conv)와 폴링 계층(Polling) 이 추가됩니다. 특징은 다음과 같습니다.
+새롭게 합성곱 계층(Conv)와 폴링 계층(Pooling) 이 추가됩니다. 특징은 다음과 같습니다.
 
 - 폴링 계층은 생략될 수도 있다.
 - 출력에 가까운 층에서는 Affine - ReLU 레이어를 사용할수도 있다.
