--- a/_posts/2017-04-09-합성곱 신경망(CNN).md
+++ b/_posts/2017-04-09-합성곱 신경망(CNN).md
@@ -153,7 +153,7 @@ graph LR;
 |---|---|
 | 4 | 2 |
 
-이를 최대 폴링(max polling)이라고 합니다. 최대 폴링은 최댓값을 구하는 연산으로, 2\*2는 대상 영역의 크기를 뜻합니다. 즉, 2\*2영역에서 가장 큰 값을 추출합니다. 이 예에서는 스트라이드가 2였으므로 2*2 윈도우가 2칸 간격으로 이동합니다.
+이를 최대 폴링(max pooling)이라고 합니다. 최대 폴링은 최댓값을 구하는 연산으로, 2\*2는 대상 영역의 크기를 뜻합니다. 즉, 2\*2영역에서 가장 큰 값을 추출합니다. 이 예에서는 스트라이드가 2였으므로 2*2 윈도우가 2칸 간격으로 이동합니다.
 
 폴링의 윈도우 크기와 스트라이드는 같은 값으로 설정하는 것이 일반적입니다. 윈도우가 3\*3 이면 스트라이드는 3으로, 4\*4면 스트라이드는 4로 설정합니다.
 
