--- a/_posts/2016-03-06-전략 디자인 패턴.md
+++ b/_posts/2016-03-06-전략 디자인 패턴.md
@@ -2,7 +2,7 @@
 layout: post
 title: "전략(strategy) 디자인 패턴"
 tags:
-- designPattern
+- design_pattern
 ---
 # 들어가며
 이 글에 나오는 내용은 헤드 퍼스트 디자인 패턴에서 나오는 내용을 정리한 것이다.
