--- a/_posts/2017-04-10-이터레이터 패턴.md
+++ b/_posts/2017-04-10-이터레이터 패턴.md
@@ -33,7 +33,7 @@ public interface Aggregate {
 
 전체적인 다이어그램은 다음과 같습니다.
 
-![다이어그램]({{ site.url }}/asset/iterator_diagram.png)
+![다이어그램]({{ site.url }}/asset/iterator_diagram.PNG)
 
 - Aggregate : 이터레이터를 만들어내는 인터페이스를 결정합니다. 이 인터페이스를 구현하면, 구현체에서 이터레이터를 생성할 수 있습니다.
     - 위의 다이어그램에서는 BookShelf, BookShelfList 가 구현체입니다.
