publis strategy pattern

--- a/_posts/2017-05-04-Strategy 패턴.md
+++ b/_posts/2017-05-04-Strategy 패턴.md
@@ -264,3 +264,103 @@ public class ProbStrategy implements Strategy{
 	}
 }
 ~~~
+
+## Player
+player 객체는 전략을 통하여, 게임을 진행하는 역할을 맡고 있습니다.
+생성자에서 전략을 주입받으면, 그 전략을 가지고 다음과 같은 역할을 합니다.
+
+- 승리/패배/무승부 시에 승패 스코어를 기록합니다.
+- 주입받은 전략을 통해 다음에 낼 Hand를 결정합니다.
+- 상태를 출력합니다.
+
+코드는 다음과 같습니다.
+
+~~~java
+public class Player {
+	private Strategy strategy;
+	private String name;
+	private int winCount;
+	private int gameCount;
+	private int loseCount;
+
+	public Player(String name, Strategy strategy) {
+		this.name = name;
+		this.strategy = strategy;
+	}
+
+	public Hand nextHand() {
+		return strategy.nextHand();
+	}
+
+	public void win() {
+		strategy.study(true);
+		gameCount++;
+		winCount++;
+	}
+
+	public void even() {
+		gameCount++;
+	}
+
+	public void lose() {
+		strategy.study(false);
+		gameCount++;
+		loseCount++;
+	}
+
+	public String printStatus() {
+		return "[" + name + ":" + gameCount + "game, " + winCount + " win, " + loseCount + " lose]";
+	}
+
+	public String getName() {
+		return name;
+	}
+}
+~~~
+
+## StrategyService
+위에서 작업한 코드를 가지고, 두 명의 플레이어를 가위바위보 시킵니다.
+코드는 다음과 같습니다.
+
+~~~java
+@Service
+public class StrategyService {
+    public void fight() {
+        Player player1 = new Player("두리", new WinningStrategy());
+        Player player2 = new Player("하나", new ProbStrategy());
+        for(int i = 0; i< 10000; i++) {
+            Hand nextHand1 = player1.nextHand();
+            Hand nextHand2 = player2.nextHand();
+            if(nextHand1.isStrongerThan(nextHand2)) {
+                System.out.println("Winner:" + player1.getName());
+                player1.win();
+                player2.lose();
+            } else if(nextHand2.isStrongerThan(nextHand1)) {
+                System.out.println("Winner:" + player2.getName());
+                player1.lose();
+                player2.win();
+            } else {
+                System.out.println("Even...");
+                player1.even();
+                player2.even();
+            }
+        }
+
+        System.out.println("Total Result :");
+        System.out.println(player1.printStatus());
+        System.out.println(player2.printStatus());
+        /*
+        [두리:10000game, 2988 win, 4262 lose]
+        [하나:10000game, 4262 win, 2988 lose]
+        같은 전략을 쓰면 승률이 50%가 나온다.
+         */
+    }
+}
+~~~
+
+승패를 확인해 보면, 하나쪽이 좀 더 승률이 높음을 알 수 있습니다.
+이처럼 변경되는 부분을 하나의 객체로 분리하고, 필요할 때마다 인터페이스를 통하여 각기 다른 전략을 주입하는 것을 전략 패턴이라고 합니다.
+
+## 결론
+이 패턴은 스프링에서 많이 사용되고 있으니, 알아두면 좋을 거 같습니다.
+스프링에서는 DI를 활용하여 전략 패턴을 구현하고 있는데요. 이전에 토비의 스프링 3.1 1권 앞부분을 정리하면서 DI에 관해서 정리한 슬라이드 쉐어가 있으니, 간단하게나마 참고하실 수 있을 거 같습니다. [여기](https://www.slideshare.net/chaejongun/di-75664648) 에서 확인하실 수 있습니다.
