not displayed mathjar and mermaid fix.

--- a/_posts/2017-03-19-오차역전파법(5장).md
+++ b/_posts/2017-03-19-오차역전파법(5장).md
@@ -308,15 +308,18 @@ Y = np.dot(X, W) + B
 이 때, X, W를 어파인 연산을 하려면 두 행렬의 차원이 같아야 합니다. X의 차원은 2고, W의 차원은 2이기 때문에 어파인 연산이 가능합니다.
 위의 연산을 계산 그래프로 그리면 다음과 같이 나타낼 수 있습니다.
 
+<div class="mermaid">
 graph LR;
     input1 -->|X|dot
     input2 -->|W|dot
     dot -->|X*W|+
     + -->|Y|output
+</div>
 
 위에서 본 식과 다른 것은, 계산 그래프에서 흐르는 값이 행렬이라는 점입니다. 행렬의 역전파를 전계해보면 다음과 같이 나타낼 수 있습니다.
 
 dL/dX = dL/dY * W^t
+
 dL/dW = X^t * dL/dY
 
 위 식에서 W^t는 W의 원소 위치를 (i,j) -> (j, i)로 변경한 전치행렬을 의미합니다.
