--- a/_posts/2017-12-17-24시간 365일 서버:인프라를 지탱하는 기술.md
+++ b/_posts/2017-12-17-24시간 365일 서버:인프라를 지탱하는 기술.md
@@ -5,6 +5,9 @@ tags:
 - book
 ---
 
+* toc
+{:toc}
+
 # 소감
 이전 회사에서는 톰캣이나 아파치 설정을 크게 만질 일이 없었다. 물론 LVS에 여러 개의 서버가 붙어있고, 그 서버가 어떻게 배포가 되는지는 알고 있었지만 설정은 인프라 담당 팀에서 다뤘기 때문에 다룰 일이 없었다. 다룰 일이 없었기 때문에 거의 몰랐던 것은 당연지사
 
