--- a/_posts/2017-12-17-24시간 365일 서버 인프라를 지탱하는 기술.md
+++ b/_posts/2017-12-17-24시간 365일 서버 인프라를 지탱하는 기술.md
@@ -1,7 +1,9 @@
 ---
 layout: post
-title: "24시간 365일 서버/인프라를 지탱하는 기술"
+title: "[책] 24시간 365일 서버/인프라를 지탱하는 기술"
 tags:
+- book
+category:
 - book
 ---
 
