--- a/_posts/2018-03-13-토비의 스프링 - 2장 테스트.md
+++ b/_posts/2018-03-13-토비의 스프링 - 2장 테스트.md
@@ -12,7 +12,7 @@ category:
 {:toc}
 
 # 테스트
-스프링에서 가장 중요한 가치는 테스트라고 이야기하고 있다 스프링은 복잡한 엔터프라이즈 애플리케이션을 효과적으로 개발하기 위한 기술인데, 이런 복잡한 애플리케이션을 개발하는 데 필요한 기술 중 하나는 객체지향 기술이다. 그리고 나머지 하나의 기술을 테스트라고 이야기하고 있다.
+스프링은 복잡한 엔터프라이즈 애플리케이션을 효과적으로 개발하기 위한 기술이다. 이런 복잡한 애플리케이션을 개발하는 데 필요한 기술 중 하나는 객체지향 기술이다. 그리고 나머지 하나의 기술을 테스트라고 이야기하고 있다.
 
 > 스프링으로 개발을 하면서 테스트를 만들지 않는다면 이는 스프링이 지닌 가치의 절반을 포기하는 샘이다.
 
@@ -63,11 +63,14 @@ public static void main(String [] args) throws SQLException {
 
 웹 프로그램에서 사용하는 DAO를 테스트하는 방법은 보통 다음과 같다.
 
+
 1. 서비스 계층, MVC 프레젠테이션 계층까지 포함한 모든 입출력 기능을 대충이라도 코드로 다 만든다.
 2. 테스트용 웹 어플리케이션을 서버에 배치한 후 웹 화면을 띄워 폼을 열고, 값을 입력한 후 버튼을 누른다.
 3. 결과를 확인한다.
 
+
 이는 흔히 사용하는 방법이지만, DAO를 테스트하는데는 단점이 너무 많다. 단점은 다음과 같다.
+
 
 1. 모든 레이어의 기능을 다 구현한 뒤에야 테스트가 가능하다.
 2. 다른 연결된 부분에서 문제가 발생하였을 확률이 있다.
@@ -78,8 +81,10 @@ public static void main(String [] args) throws SQLException {
 이를 피하기 위해, 테스트는 테스트하고자 하는 대상이 명확하다면 그 대상에만 집중하여 테스트하는 것이 바람직하다. 테스트의 관심이 다르다면 테스트할 대상을 분리하고 집중하여 접근해야 한다.
 이렇게 작은 단위의 코드에 대해 테스트를 수행한 것을 단위 테스트(unit test)라고 한다.
 
+
 - 일반적으로 단위는 작을수록 좋다.
 - 통제할 수 없는 외부의 리소스에 의존하지 않는다.
+
 
 또한 UserDaoTest는 main() 을 실행시키는 방법으로 테스트를 시행한다. 이는 좋은 방법이지만, 테스트 코드가 애플리케이션의 클래스 안에 있는 것보단 별도로 테스트용 코드를 만들어서 테스트 코드를 넣는게 좋다.
 이렇게 테스트를 따로 클래스로 분리한 이후에는 자동으로 여러 번 테스트를 반복할 수 있다.
@@ -321,7 +326,7 @@ public void getUserFailure() throws SQLException {
 }
 ~~~
 
-JUnit은 다음과 같은 방법으로 예외 발생 테스트를 할 수 있다. @Test에 ecpected를 지정해 두면 정상적으로 테스트를 종료한 경우 테스트가 실패하고, 지정한 예외가 던져지면 테스트가 성공한다.
+JUnit은 다음과 같은 방법으로 예외 발생 테스트를 할 수 있다. @Test에 expected를 지정해 두면 정상적으로 테스트를 종료한 경우 테스트가 실패하고, 지정한 예외가 던져지면 테스트가 성공한다.
 
 ### 포괄적인 테스트
 실제로 테스트를 만들다 보면, 개발자는 다음과 같은 실수를 많이 한다.
@@ -329,7 +334,6 @@ JUnit은 다음과 같은 방법으로 예외 발생 테스트를 할 수 있다
 > 개발자가 테스트를 직접 만들 때 자주 하는 실수가 하나 있다. 바로 성공하는 테스트만 골라서 만드는 것이다.
 
 > 스프링의 창시자인 로드 존슨은 "항상 실패하는 테스트를 먼저 만들라"는 조언을 했다.
-
 테스트를 작성할 때는 부정적인 케이스를 먼저 만드는 습관을 들이는 게 좋다.
 
 ## 테스트 코드 개선
