--- a/_drafts/2018-07-31-스레드 안정성.md
+++ b/_drafts/2018-07-31-스레드 안정성.md
@@ -206,3 +206,4 @@ synchronized (lock) {
 }
 ~~~
 
+위의 코드로 보호된 코드 블록은 한번에 한 스레드만 실행할 수 있기 때문에, 단일 연산으로 실행된다. 동기화 연산을 쓰면 인수분해 서블릿을 스레드 안전하게 수정할 수 있다.
