--- a/_posts/2018-08-01-스레드 안정성.md
+++ b/_posts/2018-08-01-스레드 안정성.md
@@ -47,7 +47,7 @@ category:
 스레드 안정성을 정의하기는 쉽지 않다. 스레드에 대한 납득할 만한 정의의 핵심은 모두 정확성 개념과 관련이 있는데, 스레드 안정성에 대한 정의가 모호한 것은 정확성에 대한 명확한 정의가 없기 때문이다.
 정확성이란 클래스가 해당 클래스의 명세에 부합한다는 뜻이다. 이런 모호한 정의 말고 좀 더 실전적으로 이야기하면, "특정 코드가 동작한다" 고 확신하는 것이다.
 
-이런 맥락에서 스레드 안정성은 다음과 가이 정의할 수 있다.
+이런 맥락에서 스레드 안정성은 다음과 같이 정의할 수 있다.
 
 > 여러 스레드가 클래스에 접근할 때, 실행 환경이 해당 스레드들의 실행을 어떻게 스케쥴하든 어디에 끼워 넣든, 호출하는 측에서 동기화나 다른 조율 없이도 정확하게 동작하면 해당 클래스는 스레드 안전하다고 말한다.
 
@@ -207,3 +207,102 @@ synchronized (lock) {
 ~~~
 
 위의 코드로 보호된 코드 블록은 한번에 한 스레드만 실행할 수 있기 때문에, 단일 연산으로 실행된다. 동기화 연산을 쓰면 인수분해 서블릿을 스레드 안전하게 수정할 수 있다.
+같은 락으로 보호되는 synchronized 는 단일 연산으로 실행되기 때문에, 코드는 다음과 같이 수정할 수 있다.
+
+~~~java
+@ThreadSafe
+public class UnsafeCachingFactorizer implements Servlet {
+	private final AtomicReference<BigInteger> lastNumber = new AtomicReference<>();
+	private final AtomicReference<BigInteger[]> lastFactors = new AtomicReference<>();
+
+	public synchronized void service(ServletRequest req, ServletResponse resp) {
+		BigInteger i = extractFromRequest(req);
+		if (i.equals(lastNumber.get())) {
+			encodeIntoResponse(resp, lastFactors.get());
+		} else {
+			BigInteger[] factors = factor(i);
+			lastNumber.set(i);
+			lastFactors.set(factors);
+			encodeIntoResponse(resp, factors);
+		}
+	}
+}
+~~~
+
+이렇게 하면 스레드 안전하게 서블릿을 고칠 수 있다. 하지만, 이 방법은 너무 극단적이라 퍼포먼스를 심하게 떨어뜨린다. 다른 방법을 찾아야 한다.
+
+## 락으로 상태 보호하기
+
+락은 자신이 보호하는 코드 경로에 여러 스레드가 순차적으로 접근하도록 하기 때문에, 공유된 상태에 베타적으로 접근하게 만들 수 있다.
+이를 통해 경쟁 조건을 피하려면, 하나의 공유된 상태에 대한 복합동작을 단일 연산으로 만들어야 한다. 그러나, 단순한 복합 동작 부분을 synchronized 블록으로 감싸는 것으로 문제를 해결할 수 없다.
+
+특정 변수에 대한 접근을 조율하기 위해 동기화 할 때는, 해당 변수에 접근하는 모든 부분을 동기화해야 한다. 또한 락을 사용할 때 변수에 접근하는 모든 곳에서 같은 락을 사용하여야 한다.
+
+흔하게 하는 실수 중 하나는, 공유 변수에 값을 쓸 때만 동기화가 필요하다는 것인데 잘못된 생각이다.
+
+> 모든 변경할 수 있는 공유 변수는 정확하게 단 하나의 락으로 보호해야 한다.
+
+정리하면 다음과 같다.
+
+1. 변경 가능한 데이터를 여러 스레드에서 접근하는 경우, 데이터를 락으로 보호한다.
+2. 여러 메소드가 하나의 복합 동작으로 묶일 때는 락을 사용해 추가로 동기화한다.
+3. 모든 변경할 수 있는 공유 변수는 정확하게 단 하나의 락으로 보호한다.
+
+## 활동성과 성능
+
+위의 규칙을 UnsafeCachingFactorizer 에 적용한다고 생각해 보자. 위의 서블릿은 synchronized 를 사용하여 요청을 한번에 하나씩만 처리하고 있다. 이런 코드는 요청이 많아지면, 퍼포먼스의 저하가 있다.
+
+다행히 synchronized 블록의 범위를 줄이면 스레드 안전성을 유지하면서 동시성을 향상시킬 수 있다. 즉, 단일 연산으로 처리해야 하는 작업을 메소드에서 잘 발라낸 다음에, 그 부분만 정확하게 synchronized 로 묶어주면 된다.
+다음은 수정한 코드이다.
+
+~~~java
+@ThreadSafe
+public class CachingFactorizer implements Servlet {
+	private BigInteger lastNumber;
+	private BigInteger[] lastFactors;
+	private long hits;
+	private long cacheHits;
+
+    // 두 hits 는 변경할 수 있는 공유 상태이기 때문에, 접근할 땐 항상 동기화 구문을 사용해야 한다.
+	public synchronized long getHits() {
+	    return hits;
+	}
+
+	public synchronized double getCacheHitRatio() {
+	    return (double) cacheHits / (double) hits;
+	}
+
+	public void service(ServletRequest req, ServletResponse resp) {
+		BigInteger i = extractFromRequest(req);
+		BigInteger[] factors = null;
+
+        // 해당 부분을 보호했다. 캐시된 결과를 가지고 있는지 확인하는 로직 (check - and - act)
+		synchronized (this) {
+		    ++hits;
+		    if (i.equals(lastNumber)) {
+		        ++cacheHits;
+		        factors = lastFactors.clone();
+		    }
+		}
+
+		if(factors == null) {
+		    factors = factor(i);
+		    // 캐시된 입력 결과값을 새로운 값으로 변환한다
+		    synchronized (this) {
+		        lastNumber = i;
+		        lastFactors = factors.clone();
+		    }
+        }
+        encodeIntoResponse(resp, factors);
+	}
+}
+~~~
+
+락을 얻고 놓는 작업만으로도 어느정도 부하가 생기기 때문에, 연산 구조에 문제가 생기지 않는다고 해도 synchronized 블록을 너무 잘게 쪼개는건 좋지 않다.
+위의 코드는 상태 변수에 접근하고 복합 동작을 수행하는 동안 락을 잡지만, 오래 걸릴 수 있는 인수분해 작업을 시행할 때는 락을 놓는다. 이런 작업을 통해 병렬 처리 능력에 큰 영향을 미치지 않으면서 스레드 안정성을 유지할 수 있다.
+
+가끔 설계 원칙이 상충할 수 있다. 다음 규칙을 따르자
+
+> 동기화 정책을 구현할 때는 성능을 위해 조급하게 단순성(잠재적으로 안전성을 훼손하면서)을 희생하고픈 유혹을 버려야 한다.
+
+또한 복잡하게 오래 걸리는 작업, I/O, 네트웤 작업과 같이 빨리 끝나지 않는 작업에는 가급적이면 락을 잡지 않도록 하자. 락을 오래 잡으면 성능 문제를 야기할 수 있다.
