--- a/_posts/2018-08-01-스레드 안정성.md
+++ b/_posts/2018-08-01-스레드 안정성.md
@@ -12,7 +12,7 @@ category:
 {:toc}
 
 # 개요
-이 포스팅의 내용은 <자바 병렬 프로그래밍> 의 2장 스레드 안정성을 요약한 내용입니다.
+이 포스팅의 내용은 <<자바 병렬 프로그래밍>> 의 2장 스레드 안정성을 요약한 내용입니다.
 
 # 스레드 안정성
 스레드에 안전한 코드를 작성하는 것은, 근본적으로는 상태에 대한 접근을 관리하는 것이다. 객체의 상태는 인스턴스나 static 변수에 저장된 객체의 데이터이다.
