- fix some error word. - add emphasis mark to important sentence

--- a/_posts/2018-08-01-스레드 안정성.md
+++ b/_posts/2018-08-01-스레드 안정성.md
@@ -138,7 +138,7 @@ public class LazyInitRace {
 따라서, 두 스레드가 각기 다른 인스턴스를 반환할 수 있다.
 
 ### 복합 동작
-위의 두 예제에서 이야기하는 핵심은 다음과 같다 : 일련의 작업은 외부 스레드에서 보았을 때 더 이상 나눠질 수 없는 단일 연산이여야 했다.
+위의 두 예제에서 이야기하는 핵심은 다음과 같다 : **일련의 작업은 외부 스레드에서 보았을 때 더 이상 나눠질 수 없는 단일 연산이어야 한다.**
 
 경쟁 조건을 피하려면 변수가 수정되는 동안 다른 스레드가 해당 변수를 사용하지 못하도록 막을 방법이 있어야 하며, 이런 방법으로 변수를 보호해두면 특정 스레드에서 변수를 수정할 때, 다른 스레드는 수정 전 혹은 수정 이후에만 상태를 읽거나 변경할 수 있다.
 
