자바 병렬 프로그래밍 포스팅

--- a/_posts/2018-08-07-[자바 병렬 프로그래밍] 객체 공유.md
+++ b/_posts/2018-08-07-[자바 병렬 프로그래밍] 객체 공유.md
@@ -15,8 +15,9 @@ category:
 이 포스팅의 내용은 <<자바 병렬 프로그래밍>> 의 3장 객체 공유 챕터를 요약한 내용입니다.
 
 # 객체 공유
-이번 장에서는 여러 개의 스레드에서 특정 객체를 동시에 사용하려 할 때 섞이지 않고 안전하게 동작하도록 객체를 공유하고 공개하는 바법을 살펴본다.
-소스 코드의 특정 블록을 동기화시키고자 할 때, 항상 메모리 가시성 문제가 발생하게 된다. 즉, 특정 변수의 값을 사용하고 있을 때 다른 스레드가 해당 변수의 값을 사용하지 못하도록 막아야 할 뿐만 아니라, 값을 사용한 다음 동기화 블록을 빠져나가고 나면 다른 스레드가 변경된 값을 즉시 사용할 수 있게 해야 한다.
+이번 장에서는 여러 개의 스레드에서 특정 객체를 동시에 사용하려 할 때 섞이지 않고 안전하게 동작하도록 객체를 공유하고 공개하는 방법을 살펴본다.
+
+소스 코드의 특정 블록을 동기화시키고자 할 때, 항상 메모리 가시성 문제가 발생하게 된다. 그래서 특정 변수의 값을 사용하고 있을 때 다른 스레드가 해당 변수의 값을 사용하지 못하도록 막아야 할 뿐만 아니라, 값을 사용한 다음 동기화 블록을 빠져나가고 나면 다른 스레드가 변경된 값을 즉시 사용할 수 있게 해야 한다.
 
 ## 가시성
 특정 값을 변수에 쓴 다음에, 그 값을 다시 읽으면 이전에 저장해뒀던 바로 그 값을 가져오게 된다. 대부분 이런 경우가 정상적이지만, 멀티스레드 환경에서는 그렇지 않을 수 있다.
@@ -55,7 +56,7 @@ public class NoVisibility {
 
 
 ### 스테일 데이터
-앞에 예제에서 발생하는 현상을 스테일(stale : 낡은) 데이터라고 한다. 즉, 읽기 스레드가 ready 변수의 값을 읽으려고 할 때 변수가 이미 최신 값이 아닌 것이다. 이 문제는 항상 발생하는 것도 아닌데, 즉 특정 스레드가 어떤 값을 사용할 때 그 값이 최신값일 수도 있고, 아닐수도 있다는 의미이다.
+앞에 예제에서 발생하는 현상을 스테일(stale : 낡은) 데이터라고 한다. 즉, 읽기 스레드가 ready 변수의 값을 읽으려고 할 때 변수가 이미 최신 값이 아닌 것이다. 이 문제는 항상 발생하는 것도 아니다. 그 이야기는 특정 스레드가 어떤 값을 사용할 때 그 값이 최신값일 수도 있고, 아닐수도 있다는 의미이다.
 
 다음 예제로 확인해 보자
 
@@ -73,7 +74,7 @@ public class MutableInteger {
 }
 ~~~
 
-위의 클래스에서도 value 라는 값을 get / set 에서 동시에 사용하고 있지만 동기화가 되어 있지 않다. 이는 스테일 현상을 발생시킬 수도 있는데, 특정 스레드가 set 메소드를 호출하고 다른 스레드가 get 메소드를 호출할 때, set 메소드에서 지정한 값을 읽어오지 못하는 것이다.
+위의 클래스에서도 value 라는 값을 get / set 에서 동시에 사용하고 있지만 동기화가 되어 있지 않다. 이는 스테일 현상을 발생시킬 수도 있다. 특정 스레드가 set 메소드를 호출하고 다른 스레드가 get 메소드를 호출할 때, set 메소드에서 지정한 값을 읽어오지 못하는 것이다.
 
 다음과 같이 코드를 수정하여야 한다. 
 
@@ -343,3 +344,85 @@ public class VolatileCachedFactorizer implements Servlet {
 OneValueCache 클래스가 불변인데다가, VolatileCachedFactorizer 클래스는 volatile 키워드를 사용하였으므로 시간적으로 가시성을 확보하였기 때문에 스레드 안전하다.
 
 ## 안전 공개
+
+지금까지는 객체를 숨기는 방법에 대해 이야기하였다. 이제 객체를 공개하는 방법에 대해 이야기 할 것이다. 물론, 객체를 public 으로 공개하는 것은 올바르지 못한 방법이다. 이 값이 외부 스레드에 노출되면, 다양한 스레드에서 접근하여 값을 변경할 수 있기 때문이다.
+
+### 적절하지 않은 공개 방법: 정상적인 객체도 문제를 일으킨다.
+
+만약 객체의 생성 메소드가 완료되지 않은 상태라면 그 객체를 정상적으로 사용할 수 있을까? 그 객체는 비정상적인 상태로 사용될 가능성이 있고, 생성 메소드가 끝난 다음에 의도했던 대로 값이 세팅되지 않을 수 있다.
+
+~~~java
+public class Holder {
+	private int n;
+	
+	public Holder(int n) {
+		this.n = n;
+	}
+	
+	public void assertSanity() {
+		if (n != n) {
+			throw new AssertionError("This statement is false.");
+		}
+	}
+}
+~~~ 
+Holder 객체를 다른 스레드가 사용할 수 있지만, 올바르게 동기화되어있지 않기 때문에 Holder 클래스는 올바르게 동기화되지 않았다고 할 수 있다. 객체를 올바르지 않게 공개하면 두 가지 문제점이 발생할 수 있다.
+
+1. holder 변수에 스테일 상태가 발생할 수 있다.
+2. 다른 스레드는 모두 holder 변수에서 정상적인 값을 가져갈 수 있지만 Holder 클래스의 입장에서는 스테일 상태에 빠질 수 있다.
+
+### 불변 객체와 초기화 안정성
+
+만약 불변 객체를 사용한다면, 추가적인 동기화 방법을 사용하지 않는다 해도 항상 안전하게 올바른 참조값을 사용할 수 있다. 안전하게 초기화를 진행하려면 불변 객체는 다음과 같은 요구사항을 충족하여야 한다.
+
+1. 상태를 변경할 수 없어야 하고
+2. 모든 필드의 값이 final 로 선언되어야 하며
+3. 적절한 방법으로 생성해야 한다
+
+> 불변 객체는 별다른 동기화 방법을 적용하지 않았다 해도 어느 스레드에서건 마음껏 안전하게 사용할 수 있다. 불변 객체를 공개하는 부분에 동기화 처리를 하지 않았따 해도 아무런 문제가 없다.
+
+### 안전한 공개 방법의 특성
+
+불변 객체가 아닌 객체는 모두 올바른 방법으로 안전하게 공개해야 하며, 대부분은 공개하는 스레드와 불러다 사용하는 스레드 양쪽 모두에 동기화 방법을 적용해야 한다.
+
+> 객체를 안전하게 공개하려면 해당 객체에 대한 참조와 객체 내부의 상태를 외부의 스레드에서 동시에 볼 수 있어야 한다. 올바르게 생성 메소드가 실행되고 난 객체는 다음과 같은 방법으로 안전하게 공개할 수 있다.
+> 1. 객체에 대한 참조를 static 메소드에서 초기화시킨다.
+> 2. 객체에 대한 참조를 valatile 변수 혹은 AtomicReference 클래스에 보관한다.
+> 3. 객체에 대한 참조를 올바르게 생성된 클래스 내부의 final 변수에 보관한다.
+> 4. 락을 사용해 올바르게 막혀 있는 변수에 객체에 대한 참조를 보관한다.
+
+또한 다음과 같이 선언할 수도 있다.
+
+~~~java
+public static Holder holder = new Holder(42);
+~~~
+
+이는 가장 쉬우면서도 안전한 객체 공개 방법이다. static 초기화 방법은 JVM에서 클래스를 초기화하는 시점에 작업이 모두 진행되는데, JVM 내부에서 동기화가 맞춰져 있기 때문에 객체를 안전하게 공개할 수 있다.
+
+### 결과적으로 불변인 객체
+
+기술적으로 본다면 특정 객체가 불변일 수 없다고 해도, 한 번 공개된 이후에는 그 내용이 변경되지 않는다면 결과적으로 불변 객체라 볼 수 있다. 즉, 한번 공개한 다음에는 마치 불변 객체인 것처럼 쓰면 된다.
+이와 같은 결과적인 불변 객체는 개발 과정도 간단하고 동기화 작업도 할 필요가 없기 때문에 성능 개선에 도움이 된다.
+
+> 안전하게 공개한 결과적인 불변 객체는 별다른 동기화 작업 없이도 여러 스레드에서 안전하게 호출해 사용할 수 있다.
+
+예를 들면 Date 클래스는 불변 객체가 아니라, 여러 스레드에서 사용하려면 락을 걸어야 한다. 그러나, 불변 객체인 것처럼 사용한다면 동기화 작업을 하지 않아도 된다.
+다음 코드를 보자
+
+~~~java
+public Map<String, Date> lastLogin = Collections.synchronizedMap(new HashMap<String, Date>());
+~~~
+
+이와 같은 코드에서 Map 에 들어간 Date 의 값을 변경하지 않는다면 위의 메소드로 선언한 것 만으로도 동기화 작업이 충분하다.
+
+### 가변 객체
+
+객체의 생성 메소드를 실행한 다음에 내용이 변경될 수 있다면, 공개하는 부분과 가변 객체를 사용하는 모든 부분에서 동기화 코드를 작성하여야 한다.
+
+정리하면 다음과 같다.
+
+> 가변성에 따라 객체를 공개할 때 필요한 점을 살펴보면 다음과 같다.
+> 1. 불변 객체는 어떤 방법으로 공개해도 아무 문제가 없다.
+> 2. 결과적으로 불변인 객체는 안전하게 공개해야 한다.
+> 3. 가변 객체는 안전하게 공개해야 하고, 스레드에서 안전하게 만들거나 락으로 동기화시켜야 한다.
+
