- 추상 팩토리 포스팅

--- a/_posts/2016-04-10-펙토리 패턴.md
+++ b/_posts/2016-04-10-펙토리 패턴.md
@@ -438,5 +438,215 @@ public class DependentPizzaStore {
 
 이처럼 서로 다른 종류의 재료들을 제공하기 위해 원재료군(families of ingredients)을 처리할 방법을 생각해 봐야 한다.
 
+# 원재료 공장 만들기
+
+이제 원재료를 생산하기 위한 공장을 만들 예정이다. 이 공장에서는 원재료군에 들어있는 각각의 원재료를 생산한다. 우선 지역마다 달라지는 부분을 처리하는 건 나중에 고려하려고 한다.
+
+인터페이스는 다음과 같다.
+
+~~~java
+public interface PizzaIngredientFactory {
+    
+    Dough createDough();
+    Sauce createSauce();
+    Cheese createCheese();
+    Veggies[] createVeggies();
+    Pepperoni createPepperoni();
+    Clams createClams();
+}
+~~~
+
+이제 위의 인터페이스를 구현한 뉴욕 원재료 공장을 만들어보려고 한다.
+
+~~~java
+public class NYPizzaIngredientFactory implements PizzaIngredientFactory {
+    
+    // 각 재료의 뉴욕 공장 버전을 구현한다.
+    public Dough createDough() {
+        return new ThinCrustDough();
+    }
+    
+    public Sauce createSauce() {
+        return new MarinaraSauce();
+    }
+    
+    public Cheese createCheese() {
+        return new ReggianoCheese();
+    }
+    
+    // 야채들을 만들어 배열로 반환한다.
+    public Veggies[] createVeggies() {
+        Veggies [] veggies = {new Garlic(), new Onion(), new Mushroom(), new RedPepper()};
+        return veggies;
+    }
+    
+    public Pepperoni createPepperoni() {
+        return new SlicedPepperoni();
+    } 
+    
+    public Clams createClam() {
+        return new FreshClams();
+    }
+}
+~~~
+
+# 피자 클래스 변경
+
+이제 팩토리가 준비되었으니 해당 재료를 가지고 피자를 만들 수 있다. 먼저 위의 팩토리 클래스를 사용하여 Pizza 추상 클래스를 변경해 보자
+
+~~~java
+public abstract class Pizza {
+    
+    String name;
+    Dough dough;
+    Sauce sauce;
+    Veggies [] veggies;
+    Cheese cheese;
+    Pepperoni pepperoni;
+    Clams clams;
+    
+    // 이 부분에서 피자를 만드는 데 필요한 재료들을 정돈한다.
+    abstract void prepare();
+    
+    // 나머지 과정은 앞의 abstract 클래스에서 변경되지 않는다.
+    void bake() {
+        System.out.println("Bake for 25 min at 350");
+    }
+    
+    void cut() {
+        System.out.println("cutting");
+    }
+    
+    void box() {
+        System.out.println("boxing");
+    }
+    
+    public String getName() {
+        return name;
+    }
+}
+~~~ 
+
+이제 위의 재료들을 원 공장에서 가져오게 할 것이다. 앞에 소스를 보면, 피자를 만드는 과정은 동일하다는 사실을 알 수 있다. 즉, 피자마다 클래스를 지역별로 따로 만들 필요는 없다.
+
+이제 지역마다 다른 재료를 사용하는 건 원재료 공장에서 커버해 줄 것이기 때문이다.
+
+~~~java
+public class CheesePizza extends Pizza {
+    
+    PizzaIngredientFactory ingredientFactory;
+    
+    public CheesePizza(PizzaIngredientFactory ingredientFactory) {
+        this.ingredientFactory = ingredientFactory;
+    }
+    
+    void prepare() {
+        System.out.println("Preparing " + name);
+        dough = ingredientFactory.createDough();
+        sauce = ingredientFactory.createSauce();
+        cheese = ingredientFactory.createCheese();
+    }
+}
+~~~
+
+피자 코드에서는 팩토리를 사용하여 피자에 들어갈 재료를 손질합니다. 만들어지는 재료는 어떤 팩토리를 주입하냐에 따라 달라지고, 피자 클래스에서는 신경을 전혀 쓰지 않습니다.
+이제 피자 클래스와 재료는 완전히 분리되었기 때문에 록키 산맥 지역, 북서부 지역, 서울 등 어떤 지역의 팩토리를 사용하든 피자 클래스는 그대로 재사용할 수 있습니다.
+
+# 피자 가게를 다시 살펴봅시다
+
+이제 피자 가게를 구현할 것입니다. 피자 가게에서는 각 분점들을 돌면서, 제대로 된 피자를 만드는지 확인하는 코드가 추가됩니다. 
+
+~~~java
+/**
+* NYPizzaStore 에서는 Pizza 객체를 리턴한다. 피자에 어떤 재료를 사용할지는 재료 공장에서 결정하기 때문에, 단지 입력받은 타입에 맞춰 다른 피자를 구우면 된다.
+*/
+public class NYPizzaStore extends PizzaStore {
+    
+    protected Pizza createPizza(String item) {
+        
+        Pizza pizza = null;
+        PizzaIngredientFactory ingredientFactory = new NYPizzaIngredientFactory();
+        
+        if (item.equals("cheese")) {
+			pizza = new CheesePizza(ingredientFactory);
+			pizza.setName("New York Style Cheese Pizza");
+		} else if (item.equals("veggie")) {
+			pizza = new VeggiePizza(ingredientFactory);
+			pizza.setName("New York Style Veggie Pizza");
+		} else if (item.equals("clam")) {
+			pizza = new ClamPizza(ingredientFactory);
+			pizza.setName("New York Style Clam Pizza");
+		} else if (item.equals("pepperoni")) {
+			pizza = new PepperoniPizza(ingredientFactory); 
+			pizza.setName("New York Style Pepperoni Pizza");
+		}
+		
+		return pizza;
+	}
+}
+~~~
+
+# 피자를 주문하는 흐름
+
+위의 과정을 정리해보자. 피자를 주문한다고 가정하자.
+
+- 에단은 뉴욕풍 피자를 주문한다
+- 조엘은 시카고풍 피자를 주문한다.
+
+다음과 같은 코드로 주문이 가능할 것이다.
+
+~~~java
+class Order {
+    public void orderPizza() {
+        PizzaStore nyPizzaStore = new NYPizzaStore();
+        nyPizzaStore.orderPizza("cheese");
+    }
+    
+}
+~~~
+
+피자를 주문하게 되면, 피자가게를 생성한 후 주문을 시도한다. 그러면 내부에서는 orderPizza 메소드에서 createPizza() 메소드를 호출하게 된다. 위에 코드를 가져와 기억을 되살려 보자
+
+~~~java
+public abstract class PizzaStore {
+    
+	public Pizza orderPizza(String type) {
+		Pizza pizza;
+		
+		// PizzaStore 에 있는 추상클래스를 호출
+		pizza = createPizza(type);
+		
+		pizza.prepare();
+		pizza.bake();
+		pizza.cut();
+		pizza.box();
+		
+		return pizza;
+	}
+	
+	abstract createPizza(String type); 
+}
+~~~
+
+createPizza() 메서드가 호출되면, 원재료 공장이 동작하기 시작한다.
+
+~~~java
+Pizza pizza = new CheesePizza(nyIngredientFactory);
+~~~ 
+
+원재료 공장은 각 피자의 생성자를 통해 전달되게 된다. 그 이후에 pizza의 prepare() 메서드가 호출되면, 팩토리에서 원재료를 가져오게 된다.
+
+이후에 orderPizza 메소드에서는 피자를 굽고, 자르고, 포장한다.
+
+# 추상 팩토리
+
+지금까지 한 작업은, 추상 팩토리라고 부르는 새로운 형식의 팩토리를 도입하여 서로 다른 피자에서 필요로 하는 원재료군을 생산하기 위한 방법을 구축했다.
+
+> 추상 팩토리 패턴에서는 인터페이스를 이용하여 서로 연관된, 또는 의존하는 객체를 구상 클래스를 지정하지 않고도 생성할 수 있습니다.
+
+추상 팩토리 패턴을 사용하면 클라이언트에서 추상 인터페이스를 통해서 일련의 로직들을 공급받을 수 있습니다. 실제로 어떤 제품이 생산되는지는 전혀 알 필요도 없습니다.
+
+그렇기 때문에 클라이언트와 팩토리에서 생산되는 제품의 의존성이 약해지게 됩니다. 
+
 
 
