포스팅 오타 수정하고 제목 변경 - HTTPS 암호화 포스팅 조금 추가

--- a/_posts/2016-04-25-Servlet의 생명주기.md
+++ b/_posts/2016-04-25-Servlet의 생명주기.md
@@ -12,23 +12,21 @@ category:
 {:toc}
 
 # 들어가며
-이 포스팅에 나오는 내용은 Head First Servlets & JSP에 나오는 네 번째 장, 요청과 응답에 나오는 내용을 정리한 것이다.
-
-사용 언어는 JAVA이다.
+이 포스팅에 나오는 내용은 <<Head First Servlets & JSP>>의 네 번째 장, 요청과 응답에 나오는 내용을 정리한 것이다.
 
 # 서블릿 생성 - 소멸에 대한 5분 정리
 
-서블릿의 일생동안 컨테이너는 서블릿을 관리한다. Request, Response 객체를 생성하고, 새로운 스레드를 만들어 서블릿 service() 메서드를 호출하고, Response와 Request 객체에 대한 참조를 인자로 넘긴다.
+서블릿의 일생동안 컨테이너는 서블릿을 관리한다. Request, Response 객체를 생성하고, 새로운 스레드를 만들어 서블릿 service() 메서드를 호출하고, Response 와 Request 객체에 대한 참조를 인자로 넘긴다.
 
 간단하게 정리하면 다음과 같다.
 
-1. 사용자가 서블릿에 대한 URL을 클릭한다.
+1. 사용자가 서블릿에 대한 URL 을 클릭한다.
 2. 컨테이너는 요청된 리퀘스트가 서블릿이라는 걸 파악하고, 다음 두 객체를 생성한다.
 	- HttpServletResponse
 	- HttpServletRequest
-3. 접수한 요청의 URL을 분석하여, 어떤 서블릿을 요청했는지 파악한다. (이 때, DD를 참조한다) 그 다음에 해당 서블릿 스레드를 생성하여 Request, Response 참조를 넘긴다.
-4. 컨테이너는 서블릿 service() 메서드를 호출한다. 브라우저에서 지정한 방식에 따라, doGet() 혹은 doPost()를 호출한다. 만약 브라우저에서 한 요청이 get이면 doGet, post면 doPost를 호출하게 된다.
-5. 클라이언트에게 응답을 보내기 위해, 서블릿 쓰레드는 response 객체를 사용한다. 작업이 완료되면 컨테이너에게 reponse 객체 제어가 넘어간다.
+3. 접수한 요청의 URL 을 분석하여, 어떤 서블릿을 요청했는지 파악한다. (이 때, DD를 참조한다) 그 다음에 해당 서블릿 스레드를 생성하여 Request, Response 참조를 넘긴다.
+4. 컨테이너는 서블릿 service() 메서드를 호출한다. 브라우저에서 지정한 방식에 따라, doGet() 혹은 doPost()를 호출한다. 만약 브라우저에서 한 요청이 get 이면 doGet, post 면 doPost 를 호출하게 된다.
+5. 클라이언트에게 응답을 보내기 위해, 서블릿 레드는 response 객체를 사용한다. 작업이 완료되면 컨테이너에게 response 객체 제어가 넘어간다.
 6. service() 메서드가 끝나면, 스레드는 소멸하거나 스레드 풀로 돌아간다. 그 후에 response, request 객체는 가비지 컬렉션 대상이 될 것이다.
 7. 클라이언트는 서버에게 응답을 받는다.
 
@@ -53,14 +51,14 @@ category:
 	- *초기화 할 코드가 있다면, init() 메서드를 재정의하면 됨*
 2. service()
 	- 클라이언트의 요청을 받았을 때, 새로운 스레드를 생성하거나 스레드 풀에서 하나를 가져와서 service() 호출
-	- 클라이언트의 HTTP 메소드를 참조하여, doGet 을 호출할지 doPost를 호출할지 판단한다.
-	- *거의 초기화 할 일이 없다. doPost나 doGet을 재정의하면 됨*
+	- 클라이언트의 HTTP 메소드를 참조하여, doGet 을 호출할지 doPost 를 호출할지 판단한다.
+	- *거의 초기화 할 일이 없다. doPost 나 doGet 을 재정의하면 됨*
 3. doGet() / doPost()
-	- service() 메서드가 HTTP메서드를 참조하여 doGet() / doPost()를 호출한다. 이거 이외에는 거의 사용할 경우가 없다.
+	- service() 메서드가 HTTP method 를 참조하여 doGet() / doPost()를 호출한다. 이 이외에는 거의 사용할 경우가 없다.
 	- 여기에다가 코딩을 하면 됨
 	- 항상 둘 중 하나는 재정의해야 한다.
 
 # 서블릿의 인스턴스
 또한 요청이 들어올 때마다, 서블릿은 request, response 객체를 생성하고 스레드를 만든다. 인스턴스는 서블릿에서 단 하나만 존재한다. 다수의 스레드를 생성하는 것이다.
 
-그렇다면 LVS를 두고 다수의 서버가 요청을 받는 상황이라면? 하나의 서버에는 하나의 JVM이 있을 것이고, 그 JVM에는 하나의 인스턴스가 존재할 것이다.
+그렇다면 LVS 를 두고 다수의 서버가 요청을 받는 상황이라면? 하나의 서버에는 하나의 JVM 이 있을 것이고, 그 JVM 에는 하나의 인스턴스가 존재할 것이다.
