--- a/_posts/2016-05-05-객체지향 5대 원칙.md
+++ b/_posts/2016-05-05-객체지향 5대 원칙.md
@@ -12,7 +12,7 @@ category:
 {:toc}
 
 # 들어가며
-이 포스팅에 나오는 내용은 \<UML 실전에서는 이것만 쓴다\> 6장 객체지향 개발의 원칙에 나오는 내용을 요약한 것이다.
+이 포스팅에 나오는 내용은 <<UML 실전에서는 이것만 쓴다>> 6장 객체지향 개발의 원칙에 나오는 내용을 요약한 것이다.
 
 # 설계의 품질
 잘 설계되었다는 것은 무슨 뜻일까? 잘 설계된 시스템은 이해하기 쉽고, 바꾸기도 쉽고, 재사용하기도 쉽다. 반면 잘못된 설계에서는 마치 썩는 고기처럼 역한 냄새가 난다.
