--- a/_posts/2018-03-13-토비의 스프링 - 2장 테스트.md
+++ b/_posts/2018-03-13-토비의 스프링 - 2장 테스트.md
@@ -12,11 +12,11 @@ category:
 {:toc}
 
 # 테스트
-스프링은 복잡한 엔터프라이즈 애플리케이션을 효과적으로 개발하기 위한 기술이다. 이런 복잡한 애플리케이션을 개발하는 데 필요한 기술 중 하나는 객체지향 기술이다. 그리고 나머지 하나의 기술을 테스트라고 이야기하고 있다.
+스프링은 복잡한 엔터프라이즈 애플리케이션을 효과적으로 개발하기 위한 기술이다. 이런 복잡한 애플리케이션을 개발하는 데 필요한 기술 중 하나는 객체지향 기술이다. 그리고 나머지 하나의 기술은 테스트이다.
 
 > 스프링으로 개발을 하면서 테스트를 만들지 않는다면 이는 스프링이 지닌 가치의 절반을 포기하는 샘이다.
 
-2장에서는 테스트란 무엇이며, 그 가치와 장점, 활용 전략, 스프링과의 관계를 살펴본다. 그리고 JUnit을 소개하고 이를 활용한 학습 전략 또한 살펴볼 것이다.
+2장에서는 테스트란 무엇이며, 그 가치와 장점, 활용 전략, 스프링과의 관계를 살펴본다. 그리고 JUnit 을 소개하고 이를 활용한 학습 전략 또한 살펴볼 것이다.
 
 # UserDaoTest 다시 보기
 
