--- a/_posts/2018-08-01-[자바 병렬 프로그래밍] 스레드 안정성.md
+++ b/_posts/2018-08-01-[자바 병렬 프로그래밍] 스레드 안정성.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "스레드 안정성"
+title: "[자바 병렬 프로그래밍] 스레드 안정성"
 tags:
 - book
 - java
@@ -12,7 +12,7 @@ category:
 {:toc}
 
 # 개요
-이 포스팅의 내용은 <<자바 병렬 프로그래밍>> 의 2장 스레드 안정성을 요약한 내용입니다.
+이 포스팅의 내용은 <<자바 병렬 프로그래밍>> 의 2장 스레드 안정성을 요약한 내용다.
 
 # 스레드 안정성
 스레드에 안전한 코드를 작성하는 것은, 근본적으로는 상태에 대한 접근을 관리하는 것이다. 객체의 상태는 인스턴스나 static 변수에 저장된 객체의 데이터이다.
@@ -22,7 +22,7 @@ category:
 - 변경할 수 있다 : 해당 변수 값이 변경될 수 있다.
 
 만약 객체에 여러 스레드가 접근한다면, 객체는 스레드에 안전해야 한다. 객체를 스레드에 안전하게 만드려면 동기화를 통해 변경된 상태에 접근하는 과정을 조율해야 한다.
-즉, 스레드가 하나 이상의 상태변수에 접근하고 그 중 하나라도 변수에 값을 쓰면, 해당 변수에 접근할 때 모든 스레드가 동기화를 통해 조율해야 한다.
+즉, 스레드가 하나 이상의 상태변수에 접근하고 그 중 하나라도 변수에 값을 쓰면, 해당 변수에 접근할 때 모든 스레드 동기화를 통해 조율해야 한다.
 
 자바에서는 다음과 같은 수단을 제공한다.
 
