--- a/_posts/2015-10-31-유니코드.md
+++ b/_posts/2015-10-31-유니코드.md
@@ -15,9 +15,9 @@ category:
 # 아마도 이랬을 거 같은 유니코드 이야기
 거의 모든 프로그래밍 언어에는 char형이 있다. 이건 8비트, 즉 1바이트로 이루어진 캐릭터 형이다. 왜 하필 8바이트였을까? 태초에는 8바이트로 세상의 모든 영어를 표현할 수 있기 때문이 아니었을까 하고 추측할 뿐이다. 8바이트는 128개의 코드를 표현할 수 있는데, 알파벳 + 숫자 + 특수문자 등등 하여 128개면 충분할 거라고 생각했을 것이다.
 
-그러나 시간이 흐르고 흘러 128개의 문자로 모든 걸 표현할 수 없는 시대가 왔다. 한자는? 한글 또한 자모조합의 규칙이 너무 많아서 표현하는게 쉽지 않은 것이다.
+그러나 시간이 흐르고 흘러 128개의 문자로 모든 걸 표현할 수 없는 시대가 왔다. 한자는 말 할 것도 없고, 한글 또한 자모조합의 규칙이 너무 많아서 표현하는게 쉽지 않다.
 
-그래서 1바이트로 부족한 나라들은 각기 스스로의 표준을 발전시켜 왔다. 한국의 경우 KSC5601 표준을 발전시켜 왔는데, 이렇게 되니 하나의 규약으로 모든 언어를 표현하는 것이 쉽지 않게 된 것이다.
+그래서 1바이트로 부족한 나라들은 각기 스스로의 표준을 발전시켜 왔다. 한국의 경우 KSC5601 표준을 발전시켜 왔는데, 이렇게 각각의 나라가 각기 표준을 만들게 되면 하나의 규약으로 모든 언어를 표현하는 것이 쉽지 않게 된다.
 
 여기서 유니코드가 짠! 하고 등장하게 된다. 유니코드는 "세계의 모든 문자를 표현할 수 있는 코드 체계를 만들자" 라는 사상 아래 시작되었다.
 
