--- a/_posts/2016-05-08-TCP UDP 프로토콜.md
+++ b/_posts/2016-05-08-TCP UDP 프로토콜.md
@@ -35,7 +35,7 @@ Link
 이런 흐름으로 데이터가 전송되게 된다.
 
 # TCP
-네트워크 레이어에서 ip 를 활용하여 목적지까지 데이터를 전달하는 과정을 한다면, 트렌스포트 레이어에서는 데이터를 어떻게 전송할지에 대한 규약을 정한다.
+네트워크 레이어에서 IP 를 활용하여 목적지까지 데이터를 전달하는 과정을 결정한다면, 트렌스포트 레이어에서는 데이터를 어떻게 전송할지에 대한 규약을 정한다.
 
 네트워크 세상은 결코 안전한 곳이 아니라서, 전송하는 도중에 패킷이 손실될 수도 있고 중간 라우터에서 데이터가 흘러 넘칠 수도 있다. 목적지까지 가는게 안전함을 누구도 보장할 수 없는 것이다.
 
@@ -49,13 +49,13 @@ Link
 
 
 ## 상대 소켓과의 연결
-맨 처음 요청을 보낼 때, TCP 프로토콜로 상대 소켓과 연결을 한다. 이를 Three-way hadshaking이라 한다. 먼저, 연결요청을 하는 호스트 A가 호스트 B에게 다음 메시지를 보낸다.
+맨 처음 요청을 보낼 때, TCP 프로토콜로 상대 소켓과 연결을 한다. 이를 Three-way handshaking 이라 한다. 먼저, 연결요청을 하는 호스트 A가 호스트 B에게 다음 메시지를 보낸다.
 
 > [SYN] SEQ : 1000, ACK: -
 
 위 메시지의 의미는 다음과 같다 : 패킷 넘버 1000번 패킷을 보내고, 잘 받았다면 1001번 패킷을 보내줘
 
-이는 처음 연결요청에 사용되는 메시지이기 때문에 이 메시지를 가르켜 SYN이라 한다. SYN은 Synchronization의 줄임말로써, 데이터 송수신에 앞서 전송되는 동기화 메시지라는 의미를 담고 있다.
+이는 처음 연결요청에 사용되는 메시지이기 때문에 이 메시지를 가르켜 SYN이라 한다. SYN은 Synchronization 의 줄임말로써, 데이터 송수신에 앞서 전송되는 동기화 메시지라는 의미를 담고 있다.
 
 이어서 호스트 B는 A에게 다음과 같은 메시지를 전달한다
 
