--- a/_posts/2016-05-17-HTTPS.md
+++ b/_posts/2016-05-17-HTTPS.md
@@ -12,7 +12,7 @@ category:
 {:toc}
 
 # 들어가며
-이 포스팅의 내용은 <<HTTP완벽 가이드>> 14장 https의 내용을 정리한 것이다. RSA 암호화는 책에 자세히 나와 있지 않아 따로 포스팅을 참조하여 정리하였다.
+이 포스팅의 내용은 <<HTTP 완벽 가이드>> 14장 https 의 내용을 정리한 것이다. RSA 암호화는 책에 자세히 나와 있지 않아 따로 포스팅을 참조하여 정리하였다.
 
 # 웹의 보안 
 사용자는 웹을 중요한 일을 처리할 때 사용한다. 웹으로 물건을 사고, 자신의 신용카드 정보와 개인정보를 전송한다. 웹에서 전송되는 모든 데이터는 패킷으로 전송되기 때문에, 서버와 클라이언트 사이에서 누군가가 정보를 빼 가려고 할 수 있다.
@@ -20,11 +20,11 @@ category:
 웹에서 클라이언트 - 서버만 데이터를 확인할 수 있게 하려면 어떻게 해야 할까? 데이터를 전송할 때 암호화하고, 서버는 암호화를 해제하면 될 것이다.
 
 # HTTPS
-이럴 때 사용하는 것이 HTTPS이다. HTTPS는 HTTP를 안전하게 만드는 방식 중, 가장 인기 있는 것이다. 브라우저가 http가 아니라 https로 접근하는 경우, URL이http:// 대신 https:// 로 시작하는 것을 보고 이 사실을 알아챌 수 있다.
+이럴 때 사용하는 것이 HTTPS이다. HTTPS는 HTTP를 안전하게 만드는 기술 중 가장 널리 사용되는 기술이다. 브라우저가 http가 아니라 https로 접근하는 경우, URL이 http:// 대신 https:// 로 시작하는 것을 보고 이 사실을 알아챌 수 있다.
 
 https를 사용할 때, 모든 http요청과 응답 데이터는 네트워크로 보내지기 전에 암호화된다. https는 http 하부에 전송 레벨 암호 보안 계층을 제공함으로써 동작하는데, 이는 SSL(Secure Sockets Layer)혹은 전송 계층 보안을 이용하여 구현화된다. 이 포스팅에서는 이를 SSL이라고 부르도록 하겠다.
 
-OSI 7 레이어를 기준으로 보았을 때는, 프리젠테이션 레이어에서 이를 담당한다. 사실 세션 - 프리젠테이션 - 애플리케이션 레이어는 엄밀하게 구분하기는 쉽지 않으니, 그냥 트렌스포트 레이어 윗단에서 담당한다고 생각해도 될 것 같다.
+OSI 7 레이어를 기 준으로 보았을 때는, 프리젠테이션 레이어에서 이를 담당한다. 사실 세션 - 프리젠테이션 - 애플리케이션 레이어는 엄밀하게 구분하기는 쉽지 않으니, 그냥 트렌스포트 레이어 윗단에서 담당한다고 생각해도 될 것 같다.
 
 # 암호화
 예전 시절의 암호화를 생각해 보자.
@@ -93,7 +93,7 @@ P = D(C, d)
 1. A는 가변 길이 메시지를 정제하여 고정된 길이의 요약으로 만든다.
 2. A는 그 요약에, 사용자의 개인 키를 매개변수로 하는 서명 함수를 적용한다.
 3. 한번 서명이 계산되면, A는 이를 메시지의 끝에 덧붙이고 메시지와 서명을 B에게 전송한다.
-4. B가 메시지를 보낸 사람을 확인하기 위하여 서명을 검새할 수 있다. 개인키로 알아보기 어렵게 변형된 서명에 공개키를 적용한 역함수를 적용한다.
+4. B가 메시지를 보낸 사람을 확인하기 위하여 서명을 검사할 수 있다. 개인키로 알아보기 어렵게 변형된 서명에 공개키를 적용한 역함수를 적용한다.
 
 ## 디지털 인증서
 디지털 인증서(흔히 certs라 불리는)는 신뢰할 수 있는 기관으로부터 보증 받은 사용자나 회사에 대한 정보를 담고 있다.
@@ -117,3 +117,28 @@ P = D(C, d)
 - 서명 기관의 서명
 
 브라우저가 인증서를 받으면, 서명 기관을 검사한다. 만약 그 기관이 공공이 신뢰할만한 서명 기관이라면, 브라우저는 그것의 공개키를 미리 알고 있을 것이며, 서명을 검증할 수 있다.
+
+# 브라우저 암호화 동작 방식
+
+실제로 브라우저는 다음과 같은 방식을 통해 데이터를 주고받는다.
+
+1. 클라이언트가 서버에 접속한다. 서버에 접속하면서 다음과 같은 데이터를 전송한다.
+    - **클라이언트 측에서 생성한 랜덤 데이터**
+    - 클라이언트가 지원하는 암호화 방식들
+    - 세션 아이디
+2. 서버는 응답을 전송한다.
+    - **서버 측에서 생성한 랜덤 데이터**
+    - 서버가 선택한 클라이언트의 암호화 방식 : 클라이언트가 전송한 암호화 방식 중 하나를 택한다.
+    - 인증서
+3. 클라이언트는 인증서(certs) 가 정확한 것인지 확인하기 위해 클라이언트에 내장된 CA 리스트를 확인한다. CA 리스트에 인증서가 없다면 사용자에게 경고 메시지를 출력한다. 인증서가 CA 에게서 온 것인지 확인하기 위해, 클라이언트의 공개키로 인증서를 복호화한다. 인증서가 복호화된다는 것은, CA 의 비공개키로 암호화되었다는 의미이므로 이 인증서는 정확한 것임을 알 수 있다.
+4. 클라이언트는 **클라이언트 측에서 생성한 랜덤 데이터** 와 **서버 측에서 생성한 랜덤 데이터** 를 조합하여 pre master secret 을 생성한다. pre master secret 대칭키이다. 즉 pre master secret 키로 데이터를 클라이언트에서 암호화하고 서버에서 복호화하게 된다. 그렇기 때문에 이 키는 절대로 노출되지 않고 서버로 전송되어야 한다.
+5. pre master secret 를 인증서에 동봉된 공개키로 암호화한다.
+6. 키를 서버로 전송한다. 서버는 자신의 비공개키로 pre master secret 를 복호화한다.
+7. pre master secret 키로 암호화 한 정보를 전송한다.
+
+정리하면 다음과 같다. 
+
+- 데이터는 대칭키 방식으로 주고받는다.
+- 대칭키는 공개키로 암호화하여 공유한다.
+
+이렇게 하는 이유는, 공개키 방식의 암호화가 매우 많은 컴퓨터 자원을 소비하기 때문이다. 그렇기 때문에 키 교환에만 공개키를 사용하고, 실제 암호화에는 대칭키를 사용한다.  
